@@ -1,42 +1,65 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.debugger.jdi;
 
-import com.intellij.Patches;
 import com.intellij.debugger.engine.DebuggerUtils;
+import com.intellij.debugger.engine.JVMNameUtil;
 import com.intellij.debugger.impl.DebuggerUtilsEx;
-import com.intellij.openapi.util.Ref;
-import com.intellij.util.ReflectionUtil;
+import com.intellij.openapi.util.io.BufferExposingByteArrayOutputStream;
+import com.intellij.util.ArrayUtil;
 import com.intellij.util.ThrowableConsumer;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.MultiMap;
-import com.sun.jdi.*;
+import com.sun.jdi.ClassType;
+import com.sun.jdi.InterfaceType;
+import com.sun.jdi.Location;
+import com.sun.jdi.Method;
+import com.sun.jdi.ReferenceType;
+import com.sun.jdi.VirtualMachine;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.jetbrains.org.objectweb.asm.*;
+import org.jetbrains.org.objectweb.asm.Attribute;
+import org.jetbrains.org.objectweb.asm.ClassReader;
+import org.jetbrains.org.objectweb.asm.ClassVisitor;
+import org.jetbrains.org.objectweb.asm.ClassWriter;
+import org.jetbrains.org.objectweb.asm.Label;
+import org.jetbrains.org.objectweb.asm.MethodVisitor;
+import org.jetbrains.org.objectweb.asm.Opcodes;
 import org.jetbrains.org.objectweb.asm.Type;
 
-import java.io.ByteArrayOutputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
-import java.util.*;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-/**
- * @author egor
- */
-public class MethodBytecodeUtil {
-  private MethodBytecodeUtil() {
+public final class MethodBytecodeUtil {
+  private MethodBytecodeUtil() { }
+
+  public interface InstructionOffsetReader {
+    void readBytecodeInstructionOffset(int offset);
   }
 
   /**
-   * Allows to use ASM MethodVisitor with jdi method bytecode
+   * Allows to use ASM {@link MethodVisitor} with JDI method bytecode.
+   * Visitor could implement {@link InstructionOffsetReader} to additionally consume bytecode instruction offsets.
    */
   public static void visit(Method method, MethodVisitor methodVisitor, boolean withLineNumbers) {
+    assert method.virtualMachine().canGetBytecodes();
     visit(method, method.bytecodes(), methodVisitor, withLineNumbers);
   }
 
+  /**
+   * @see #visit(Method, MethodVisitor, boolean)
+   */
   public static void visit(Method method, long maxOffset, MethodVisitor methodVisitor, boolean withLineNumbers) {
     if (maxOffset > 0) {
       // need to keep the size, otherwise labels array will not be initialized correctly
+      assert method.virtualMachine().canGetBytecodes();
       byte[] originalBytecodes = method.bytecodes();
       byte[] bytecodes = originalBytecodes;
       if (maxOffset < originalBytecodes.length) {
@@ -47,127 +70,100 @@ public class MethodBytecodeUtil {
     }
   }
 
-  public static byte[] getConstantPool(ReferenceType type) {
-    if (Patches.JDK_BUG_ID_6822627) {
-      try {
-        return type.constantPool();
-      }
-      catch (NullPointerException e) { // workaround for JDK bug 6822627
-        ReflectionUtil.resetField(type, "constantPoolInfoGotten");
-        return type.constantPool();
-      }
-    }
-    else {
-      return type.constantPool();
-    }
-  }
-
   private static void visit(Method method, byte[] bytecodes, MethodVisitor methodVisitor, boolean withLineNumbers) {
     ReferenceType type = method.declaringType();
-    try {
-      byte[] constantPool = getConstantPool(type);
-      try (ByteArrayBuilderOutputStream bos = new ByteArrayBuilderOutputStream(constantPool.length + 24);
-           DataOutputStream dos = new DataOutputStream(bos)) {
 
-        dos.writeInt(0xCAFEBABE); // magic
-        dos.writeInt(Opcodes.V1_8); // version
-        dos.writeShort(type.constantPoolCount()); // constant_pool_count
-        dos.write(constantPool); // constant_pool
-        dos.writeShort(0); //             access_flags;
-        dos.writeShort(0); //             this_class;
-        dos.writeShort(0); //             super_class;
-        dos.writeShort(0); //             interfaces_count;
-        dos.writeShort(0); //             fields_count;
-        dos.writeShort(0); //             methods_count;
-        dos.writeShort(0); //             attributes_count;
+    assert type.virtualMachine().canGetConstantPool();
+    BufferExposingByteArrayOutputStream bytes = new BufferExposingByteArrayOutputStream();
+    try (DataOutputStream dos = new DataOutputStream(bytes)) {
+      writeClassHeader(dos, type.constantPoolCount(), type.constantPool());
+    }
+    catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+    ClassReader reader = new ClassReader(bytes.getInternalBuffer(), 0, bytes.size());
 
-        ClassReader reader = new ClassReader(bos.getBuffer());
-        ClassWriter writer = new ClassWriter(reader, 0);
+    ClassWriter writer = new ClassWriter(reader, 0);
+    String superName = null;
+    String[] interfaces = null;
+    if (type instanceof ClassType classType) {
+      ClassType superClass = classType.superclass();
+      superName = superClass != null ? superClass.name() : null;
+      interfaces = classType.interfaces().stream().map(ReferenceType::name).toArray(String[]::new);
+    }
+    else if (type instanceof InterfaceType interfaceType) {
+      interfaces = interfaceType.superinterfaces().stream().map(ReferenceType::name).toArray(String[]::new);
+    }
+    writer.visit(Opcodes.V1_8, Opcodes.ACC_PUBLIC, type.name(), type.signature(), superName, interfaces);
+    Attribute bootstrapMethods = createBootstrapMethods(reader, writer);
+    if (bootstrapMethods != null) {
+      writer.visitAttribute(bootstrapMethods);
+    }
+    MethodVisitor mv = writer.visitMethod(Opcodes.ACC_PUBLIC, method.name(), method.signature(), method.signature(), null);
+    mv.visitAttribute(createCode(writer, method, bytecodes, withLineNumbers));
 
-        String superName = null;
-        String[] interfaces = null;
-        if (type instanceof ClassType) {
-          ClassType classType = (ClassType)type;
-          ClassType superClass = classType.superclass();
-          superName = superClass != null ? superClass.name() : null;
-          interfaces = classType.interfaces().stream().map(ReferenceType::name).toArray(String[]::new);
+    InstructionOffsetReader insnOffsReader = methodVisitor instanceof InstructionOffsetReader offsetReader
+                                             ? offsetReader
+                                             : null;
+
+    new ClassReader(writer.toByteArray()) {
+      @Override
+      protected void readBytecodeInstructionOffset(int bytecodeOffset) {
+        if (insnOffsReader != null) {
+          insnOffsReader.readBytecodeInstructionOffset(bytecodeOffset);
         }
-        else if (type instanceof InterfaceType) {
-          interfaces = ((InterfaceType)type).superinterfaces().stream().map(ReferenceType::name).toArray(String[]::new);
-        }
-
-        writer.visit(Opcodes.V1_8, Opcodes.ACC_PUBLIC, type.name(), type.signature(), superName, interfaces);
-        Attribute bootstrapMethods = createBootstrapMethods(reader, writer);
-        if (bootstrapMethods != null) {
-          writer.visitAttribute(bootstrapMethods);
-        }
-
-        MethodVisitor mv = writer.visitMethod(Opcodes.ACC_PUBLIC, method.name(), method.signature(), method.signature(), null);
-        mv.visitAttribute(createCode(writer, method, bytecodes, withLineNumbers));
-
-        new ClassReader(writer.toByteArray()).accept(new ClassVisitor(Opcodes.API_VERSION) {
-          @Override
-          public MethodVisitor visitMethod(int access, String name, String desc, String signature, String[] exceptions) {
-            assert name.equals(method.name());
-            return methodVisitor;
-          }
-        }, 0);
       }
-    }
-    catch (IOException ignored) {
-    }
+    }.accept(new ClassVisitor(Opcodes.API_VERSION) {
+      @Override
+      public MethodVisitor visitMethod(int access, String name, String desc, String signature, String[] exceptions) {
+        assert name.equals(method.name());
+        return methodVisitor;
+      }
+    }, 0);
   }
 
-  @NotNull
-  private static Attribute createAttribute(String name, ThrowableConsumer<DataOutputStream, IOException> generator) throws IOException {
-    try (ByteArrayOutputStream bos = new ByteArrayOutputStream(); DataOutputStream dos = new DataOutputStream(bos)) {
-      dos.writeInt(0xCAFEBABE); // magic
-      dos.writeInt(Opcodes.V1_8); // version
-      dos.writeShort(0); // constant_pool_count
-
-      // we generate and put attribute right after the constant pool
-      int attributeSize = dos.size();
-      generator.consume(dos);
-      attributeSize = dos.size() - attributeSize;
-
-      ClassReader cr = new ClassReader(bos.toByteArray());
-
-      return new Attribute(name) {
-        @Override
-        public Attribute read(ClassReader cr, int off, int len, char[] buf, int codeOff, Label[] labels) {
-          return super.read(cr, off, len, buf, codeOff, labels);
-        }
-      }.read(cr, cr.header, attributeSize, null, 0, null);
-    }
+  private static void writeClassHeader(DataOutputStream dos, int constantPoolCount, byte[] constantPool) throws IOException {
+    dos.writeInt(0xCAFEBABE);
+    dos.writeInt(Opcodes.V1_8);
+    dos.writeShort(constantPoolCount + 1);
+    dos.write(constantPool);
+    byte[] utfStr = "BootstrapMethods".getBytes(StandardCharsets.UTF_8);
+    dos.writeByte(1);  // name string for the fake "BootstrapMethods" attribute
+    dos.writeShort(utfStr.length);
+    dos.write(utfStr);
+    dos.writeShort(0);  // access_flags
+    dos.writeShort(0);  // this_class
+    dos.writeShort(0);  // super_class
+    dos.writeShort(0);  // interfaces_count
+    dos.writeShort(0);  // fields_count
+    dos.writeShort(0);  // methods_count
+    dos.writeShort(1);  // attributes_count
+    dos.writeShort(constantPoolCount);  // fake "BootstrapMethods" attribute
+    dos.writeInt(0);
   }
 
-  @Nullable
-  private static Attribute createBootstrapMethods(ClassReader classReader, ClassWriter classWriter) throws IOException {
-    Set<Short> indys = new HashSet<>();
+  private static @Nullable Attribute createBootstrapMethods(ClassReader classReader, ClassWriter classWriter) {
+    Set<Short> bootstrapMethods = new HashSet<>();
     // scan class pool for indy calls
     for (int i = 1; i < classReader.getItemCount(); i++) {
       int index = classReader.getItem(i);
       int tag = classReader.readByte(index - 1);
       switch (tag) {
-        case 5: // ClassWriter.LONG
-        case 6: // ClassWriter.DOUBLE
+        case 5, 6 ->  // Symbol.CONSTANT_LONG_TAG, Symbol.CONSTANT_DOUBLE_TAG
+          //noinspection AssignmentToForLoopParameter
           ++i;
-          break;
-        case 18: // ClassWriter.INDY
-          indys.add(classReader.readShort(index));
-          //short methodIndex = classReader.readShort(index);
-          short nameTypeIndex = classReader.readShort(index + 2);
+        case 17, 18 ->  // Symbol.CONSTANT_DYNAMIC_TAG, Symbol.CONSTANT_INVOKE_DYNAMIC_TAG
+          bootstrapMethods.add(classReader.readShort(index));
       }
     }
 
-    if (!indys.isEmpty()) {
+    if (!bootstrapMethods.isEmpty()) {
       int dummyRef = classWriter.newHandle(Opcodes.H_INVOKESTATIC, "DummyOwner", "DummyMethod", "", false); // dummy for now
       return createAttribute("BootstrapMethods", dos -> {
-        dos.writeShort(indys.size());
-        for (Short indy : indys) {
+        dos.writeShort(bootstrapMethods.size());
+        for (int i = 0; i < bootstrapMethods.size(); i++) {
           dos.writeShort(dummyRef); // bootstrap_method_ref
           dos.writeShort(0); // num_bootstrap_arguments
-          //dos.writeShort(0); // bootstrap_arguments
         }
       });
     }
@@ -175,15 +171,14 @@ public class MethodBytecodeUtil {
     return null;
   }
 
-  @NotNull
-  private static Attribute createCode(ClassWriter cw, Method method, byte[] bytecodes, boolean withLineNumbers) throws IOException {
+  private static Attribute createCode(ClassWriter cw, Method method, byte[] bytecodes, boolean withLineNumbers) {
     return createAttribute("Code", dos -> {
       dos.writeShort(0); // max_stack
       dos.writeShort(0); // max_locals
       dos.writeInt(bytecodes.length);  // code_length
       dos.write(bytecodes); // code
       dos.writeShort(0); // exception_table_length
-      List<Location> locations = withLineNumbers ? DebuggerUtilsEx.allLineLocations(method) : Collections.emptyList();
+      List<Location> locations = withLineNumbers ? DebuggerUtilsEx.allLineLocations(method) : null;
       if (!ContainerUtil.isEmpty(locations)) {
         dos.writeShort(1); // attributes_count
         dos.writeShort(cw.newUTF8("LineNumberTable"));
@@ -200,83 +195,106 @@ public class MethodBytecodeUtil {
     });
   }
 
+  private static Attribute createAttribute(String name, ThrowableConsumer<? super DataOutputStream, ? extends IOException> generator) {
+    BufferExposingByteArrayOutputStream bytes = new BufferExposingByteArrayOutputStream();
+    int start, end;
+
+    try (DataOutputStream dos = new DataOutputStream(bytes)) {
+      writeClassHeader(dos, 0, ArrayUtil.EMPTY_BYTE_ARRAY);
+      start = dos.size();
+      generator.consume(dos);
+      end = dos.size();
+    }
+    catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+
+    ClassReader reader = new ClassReader(bytes.getInternalBuffer(), 0, bytes.size());
+    return new Attribute(name) {
+      public Attribute read() {
+        return read(reader, start, end - start, null, 0, null);
+      }
+    }.read();
+  }
+
   private static final Type OBJECT_TYPE = Type.getObjectType("java/lang/Object");
 
   public static Type getVarInstructionType(int opcode) {
-    switch (opcode) {
-      case Opcodes.LLOAD:
-      case Opcodes.LSTORE:
-        return Type.LONG_TYPE;
-      case Opcodes.DLOAD:
-      case Opcodes.DSTORE:
-        return Type.DOUBLE_TYPE;
-      case Opcodes.FLOAD:
-      case Opcodes.FSTORE:
-        return Type.FLOAT_TYPE;
-      case Opcodes.ILOAD:
-      case Opcodes.ISTORE:
-        return Type.INT_TYPE;
-      default:
-        // case Opcodes.ALOAD:
-        // case Opcodes.ASTORE:
-        // case RET:
-        return OBJECT_TYPE;
-    }
+    return switch (opcode) {
+      case Opcodes.LLOAD, Opcodes.LSTORE -> Type.LONG_TYPE;
+      case Opcodes.DLOAD, Opcodes.DSTORE -> Type.DOUBLE_TYPE;
+      case Opcodes.FLOAD, Opcodes.FSTORE -> Type.FLOAT_TYPE;
+      case Opcodes.ILOAD, Opcodes.ISTORE -> Type.INT_TYPE;
+      default -> OBJECT_TYPE;
+    };
   }
 
-  @Nullable
-  public static Method getLambdaMethod(ReferenceType clsType, @NotNull ClassesByNameProvider classesByName) {
-    Ref<Method> methodRef = Ref.create();
+  public static @Nullable Method getLambdaMethod(ReferenceType clsType, @NotNull ClassesByNameProvider classesByName) {
     if (DebuggerUtilsEx.isLambdaClassName(clsType.name())) {
       List<Method> applicableMethods = ContainerUtil.filter(clsType.methods(), m -> m.isPublic() && !m.isBridge());
       if (applicableMethods.size() == 1) {
-        visit(applicableMethods.get(0), new MethodVisitor(Opcodes.API_VERSION) {
-          @Override
-          public void visitMethodInsn(int opcode, String owner, String name, String desc, boolean itf) {
-            ReferenceType cls = ContainerUtil.getFirstItem(classesByName.get(owner));
-            if (cls != null) {
-              Method method = DebuggerUtils.findMethod(cls, name, desc);
-              if (method != null) {
-                methodRef.setIfNull(method);
-              }
-            }
-          }
-        }, false);
+        return getTargetMethod(applicableMethods.getFirst(), classesByName);
       }
     }
-    return methodRef.get();
+    return null;
   }
 
-  @Nullable
-  public static Method getBridgeTargetMethod(Method method, @NotNull ClassesByNameProvider classesByName) {
-    Ref<Method> methodRef = Ref.create();
-    if (method.isBridge()) {
-      visit(method, new MethodVisitor(Opcodes.API_VERSION) {
-        @Override
-        public void visitMethodInsn(int opcode, String owner, String name, String desc, boolean itf) {
-          if ("java/lang/AbstractMethodError".equals(owner)) {
-            return;
-          }
-          ReferenceType declaringType = method.declaringType();
-          ReferenceType cls;
-          owner = owner.replace("/", ".");
-          if (declaringType.name().equals(owner)) {
-            cls = declaringType;
-          }
-          else {
-            cls = ContainerUtil.getFirstItem(classesByName.get(owner));
-          }
-          if (cls != null) {
-            Method method = DebuggerUtils.findMethod(cls, name, desc);
-            if (method != null) {
-              methodRef.setIfNull(method);
-            }
-          }
-        }
-      }, false);
-    }
-    return methodRef.get();
+  public static @Nullable Method getBridgeTargetMethod(Method method, @NotNull ClassesByNameProvider classesByName) {
+    return method.isBridge() ? getTargetMethod(method, classesByName) : null;
   }
+
+  private static Method getTargetMethod(Method method, @NotNull ClassesByNameProvider classesByName) {
+    List<MethodCall> calls = getMethodCalls(method);
+    if (calls.isEmpty()) {
+      return null;
+    }
+
+    List<MethodCall> targetCalls = ContainerUtil.filter(
+      calls, call -> !JVMNameUtil.isBoxingOrUnboxingMethod(call.owner(), call.name(), call.descriptor()));
+    if (targetCalls.isEmpty()) {
+      targetCalls = calls;
+    }
+
+    MethodCall targetCall = targetCalls.getFirst();
+    if (targetCalls.size() > 1) {
+      String lambdaBaseClassName = DebuggerUtilsEx.getLambdaBaseClassName(method.declaringType().name());
+      for (MethodCall call : targetCalls) {
+        if (call.owner().equals(lambdaBaseClassName)) {
+          targetCall = call;
+          break;
+        }
+      }
+    }
+    return resolveMethod(method, targetCall, classesByName);
+  }
+
+  private static @Nullable Method resolveMethod(Method caller,
+                                                MethodCall call,
+                                                @NotNull ClassesByNameProvider classesByName) {
+    ReferenceType declaringType = caller.declaringType();
+    ReferenceType targetType = declaringType.name().equals(call.owner())
+                               ? declaringType
+                               : ContainerUtil.getFirstItem(classesByName.get(call.owner()));
+    if (targetType == null) {
+      return null;
+    }
+    return DebuggerUtils.findMethod(targetType, call.name(), call.descriptor());
+  }
+
+  private static @NotNull List<MethodCall> getMethodCalls(Method method) {
+    List<MethodCall> result = new ArrayList<>();
+    visit(method, new MethodVisitor(Opcodes.API_VERSION) {
+      @Override
+      public void visitMethodInsn(int opcode, String owner, String name, String descriptor, boolean isInterface) {
+        if (!"java/lang/AbstractMethodError".equals(owner)) {
+          result.add(new MethodCall(Type.getObjectType(owner).getClassName(), name, descriptor));
+        }
+      }
+    }, false);
+    return result;
+  }
+
+  private record MethodCall(@NotNull String owner, @NotNull String name, @NotNull String descriptor) { }
 
   public static List<Location> removeSameLineLocations(@NotNull List<Location> locations) {
     if (locations.size() < 2) {
@@ -286,7 +304,6 @@ public class MethodBytecodeUtil {
     for (Location location : locations) {
       byMethod.putValue(location.method(), location);
     }
-
     List<Location> res = new ArrayList<>();
     for (Map.Entry<Method, Collection<Location>> entry : byMethod.entrySet()) {
       res.addAll(removeMethodSameLineLocations(entry.getKey(), (List<Location>)entry.getValue()));
@@ -299,11 +316,17 @@ public class MethodBytecodeUtil {
     if (locationsSize < 2) {
       return locations;
     }
-    //noinspection ConstantConditions
-    int lineNumber = ContainerUtil.getFirstItem(locations).lineNumber();
+
+    VirtualMachine vm = method.declaringType().virtualMachine();
+    if (!vm.canGetConstantPool() || !vm.canGetBytecodes()) {
+      return locations;
+    }
+
+    int lineNumber = locations.getFirst().lineNumber();
     List<Boolean> mask = new ArrayList<>(locationsSize);
     visit(method, new MethodVisitor(Opcodes.API_VERSION) {
       boolean myNewBlock = true;
+
       @Override
       public void visitLineNumber(int line, Label start) {
         if (lineNumber == line) {
@@ -336,17 +359,7 @@ public class MethodBytecodeUtil {
       }
       return res;
     }
+
     return locations;
-  }
-
-  private static class ByteArrayBuilderOutputStream extends ByteArrayOutputStream {
-    public ByteArrayBuilderOutputStream(int size) {
-      super(size);
-    }
-
-    byte[] getBuffer() {
-      assert buf.length == count : "Buffer is not fully filled";
-      return buf;
-    }
   }
 }
