@@ -1,42 +1,36 @@
 package com.intellij.ide.util.newProjectWizard;
 
 import com.intellij.framework.FrameworkVersion;
+import com.intellij.framework.PresentableVersion;
 import com.intellij.ide.util.newProjectWizard.impl.FrameworkSupportModelBase;
 import com.intellij.openapi.ui.ComboBox;
 import com.intellij.openapi.ui.VerticalFlowLayout;
-import com.intellij.ui.ListCellRendererWrapper;
+import com.intellij.openapi.util.NlsContexts;
+import com.intellij.ui.dsl.listCellRenderer.BuilderKt;
 import com.intellij.util.ui.FormBuilder;
 
-import javax.swing.*;
+import javax.swing.JPanel;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.util.ArrayList;
 import java.util.List;
 
-/**
- * @author nik
- */
 public class FrameworkVersionComponent {
   private final JPanel myMainPanel;
   private final FrameworkSupportModelBase myModel;
   private final List<? extends FrameworkVersion> myAllVersions;
   private final JPanel myVersionsPanel;
-  private final ComboBox myVersionsBox;
+  private final ComboBox<FrameworkVersion> myVersionsBox;
   private final String myFrameworkOrGroupId;
 
   public FrameworkVersionComponent(final FrameworkSupportModelBase model, final String frameworkOrGroupId,
-                                   final List<? extends FrameworkVersion> versions_, String labelText) {
+                                   final List<? extends FrameworkVersion> versions_, @NlsContexts.Label String labelText) {
     myModel = model;
     myAllVersions = versions_;
     myMainPanel = new JPanel(new VerticalFlowLayout(VerticalFlowLayout.TOP, 0, 3, true, false));
     myFrameworkOrGroupId = frameworkOrGroupId;
-    myVersionsBox = new ComboBox();
-    myVersionsBox.setRenderer(new ListCellRendererWrapper<FrameworkVersion>() {
-      @Override
-      public void customize(JList list, FrameworkVersion value, int index, boolean selected, boolean hasFocus) {
-        setText(value != null ? value.getPresentableName() : "");
-      }
-    });
+    myVersionsBox = new ComboBox<>();
+    myVersionsBox.setRenderer(BuilderKt.textListCellRenderer("", PresentableVersion::getPresentableName));
     myVersionsBox.addActionListener(new ActionListener() {
       @Override
       public void actionPerformed(ActionEvent e) {
@@ -69,7 +63,7 @@ public class FrameworkVersionComponent {
     }
     myVersionsPanel.setVisible(!versions.isEmpty());
     if (!versions.isEmpty()) {
-      FrameworkVersion toSelect = oldSelection != null && versions.contains(oldSelection) ? oldSelection : versions.get(versions.size() - 1);
+      FrameworkVersion toSelect = oldSelection != null && versions.contains(oldSelection) ? oldSelection : versions.getLast();
       myVersionsBox.setSelectedItem(toSelect);
       myModel.setSelectedVersion(myFrameworkOrGroupId, toSelect);
     }
