@@ -1,20 +1,7 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.jarFinder;
 
+import com.intellij.ide.JavaUiBundle;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationType;
 import com.intellij.openapi.diagnostic.Logger;
@@ -25,52 +12,81 @@ import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.JarFileSystem;
 import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.platform.backend.workspace.WorkspaceModel;
+import com.intellij.platform.workspace.jps.entities.LibraryEntity;
+import com.intellij.platform.workspace.storage.ImmutableEntityStorage;
 import com.intellij.psi.PsiFile;
 import com.intellij.util.ArrayUtil;
+import com.intellij.util.containers.ContainerUtil;
+import com.intellij.workspaceModel.ide.legacyBridge.LibraryBridgesKt;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 
-/**
- * @author Sergey Evdokimov
- */
-public class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
+final class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
+
   private static final Logger LOG = Logger.getInstance(IvyAttachSourceProvider.class);
 
-  @NotNull
   @Override
-  public Collection<AttachSourcesAction> getActions(List<LibraryOrderEntry> orderEntries, PsiFile psiFile) {
+  public @NotNull Collection<? extends AttachSourcesAction> getActions(@NotNull List<? extends LibraryOrderEntry> orderEntries,
+                                                                       @NotNull PsiFile psiFile) {
+    Library library = getLibraryFromOrderEntriesList(orderEntries);
+    if (library == null) return List.of();
+
+    return getActionsForLibrary(psiFile, library);
+  }
+
+  @Override
+  public @NotNull @Unmodifiable Collection<? extends AttachSourcesAction> getLibrariesActions(@NotNull Collection<LibraryEntity> libraryEntities,
+                                                                                              @NotNull PsiFile psiFile) {
+    ImmutableEntityStorage snapshot = WorkspaceModel.getInstance(psiFile.getProject()).getCurrentSnapshot();
+    Library library = ContainerUtil.getFirstItem(ContainerUtil.mapNotNull(libraryEntities, entity -> {
+      return LibraryBridgesKt.findLibraryBridge(entity, snapshot);
+    }));
+
+    if (library == null) return List.of();
+
+    return getActionsForLibrary(psiFile, library);
+  }
+
+  private @NotNull Collection<? extends AttachSourcesAction> getActionsForLibrary(@NotNull PsiFile psiFile, @NotNull Library library) {
     VirtualFile jar = getJarByPsiFile(psiFile);
-    if (jar == null) return Collections.emptyList();
+    if (jar == null) return List.of();
 
     VirtualFile jarsDir = jar.getParent();
-    if (jarsDir == null || !jarsDir.getName().equals("jars")) return Collections.emptyList();
+    if (jarsDir == null || !jarsDir.getName().equals("jars")) return List.of();
 
     VirtualFile artifactDir = jarsDir.getParent();
-    if (artifactDir == null) return Collections.emptyList();
+    if (artifactDir == null) return List.of();
 
     String jarNameWithoutExt = jar.getNameWithoutExtension();
     String artifactName = artifactDir.getName();
 
     if (!jarNameWithoutExt.startsWith(artifactName) || !jarNameWithoutExt.substring(artifactName.length()).startsWith("-")) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     String version = jarNameWithoutExt.substring(artifactName.length() + 1);
 
     //noinspection SpellCheckingInspection
     VirtualFile propertiesFile = artifactDir.findChild("ivydata-" + version + ".properties");
-    if (propertiesFile == null) return Collections.emptyList();
+    if (propertiesFile == null) return List.of();
 
-    Library library = getLibraryFromOrderEntriesList(orderEntries);
-    if (library == null) return Collections.emptyList();
+    return getActionsInternal(psiFile, artifactName, version, artifactDir, library, propertiesFile);
+  }
 
+  private @NotNull List<? extends AttachSourcesAction> getActionsInternal(@NotNull PsiFile psiFile,
+                                                                          String artifactName,
+                                                                          String version,
+                                                                          VirtualFile artifactDir,
+                                                                          Library library,
+                                                                          VirtualFile propertiesFile) {
     String sourceFileName = artifactName + '-' + version + "-sources.jar";
 
     VirtualFile sources = artifactDir.findChild("sources");
@@ -80,17 +96,18 @@ public class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
         // File already downloaded.
         VirtualFile jarRoot = JarFileSystem.getInstance().getJarRootForLocalFile(srcFile);
         if (jarRoot == null || ArrayUtil.contains(jarRoot, (Object[])library.getFiles(OrderRootType.SOURCES))) {
-          return Collections.emptyList(); // Sources already attached.
+          return List.of(); // Sources already attached.
         }
 
-        return Collections.singleton(new AttachExistingSourceAction(jarRoot, library, "Attache sources from Ivy repository") );
+        return List.of(new AttachExistingSourceAction(jarRoot, library,
+                                                      JavaUiBundle.message("ivi.attach.source.provider.action.name")));
       }
     }
 
     String url = extractUrl(propertiesFile, artifactName);
-    if (StringUtil.isEmptyOrSpaces(url)) return Collections.emptyList();
+    if (StringUtil.isEmptyOrSpaces(url)) return List.of();
 
-    return Collections.singleton(new DownloadSourcesAction(psiFile.getProject(), "Downloading Ivy Sources", url) {
+    return List.of(new DownloadSourcesAction(psiFile.getProject(), "Downloading Ivy Sources", url) {
       @Override
       protected void storeFile(byte[] content) {
         try {
@@ -105,16 +122,15 @@ public class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
           addSourceFile(JarFileSystem.getInstance().getJarRootForLocalFile(srcFile), library);
         }
         catch (IOException e) {
-          String message = "Failed to save " + artifactDir.getPath() + "/sources/" + sourceFileName;
-          new Notification(myMessageGroupId, "IO Error", message, NotificationType.ERROR).notify(myProject);
+          String message = JavaUiBundle.message("error.message.failed.to.save.0", artifactDir.getPath() + "/sources/" + sourceFileName);
+          new Notification(myMessageGroupId, JavaUiBundle.message("notification.title.io.error"), message, NotificationType.ERROR).notify(myProject);
           LOG.warn(e);
         }
       }
     });
   }
 
-  @Nullable
-  private static String extractUrl(VirtualFile properties, String artifactName) {
+  private static @Nullable String extractUrl(VirtualFile properties, String artifactName) {
     String prefix = "artifact:" + artifactName + "#source#jar#";
 
     try {
