@@ -1,41 +1,49 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.psi.impl;
 
-import com.intellij.psi.*;
+import com.intellij.psi.CommonClassNames;
+import com.intellij.psi.JavaElementVisitor;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.JavaTokenType;
+import com.intellij.psi.PsiArrayType;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiClassObjectAccessExpression;
+import com.intellij.psi.PsiConditionalExpression;
+import com.intellij.psi.PsiConstantEvaluationHelper;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiEnumConstant;
+import com.intellij.psi.PsiExpression;
+import com.intellij.psi.PsiLiteralExpression;
+import com.intellij.psi.PsiMethodCallExpression;
+import com.intellij.psi.PsiPackage;
+import com.intellij.psi.PsiParenthesizedExpression;
+import com.intellij.psi.PsiPolyadicExpression;
+import com.intellij.psi.PsiPrefixExpression;
+import com.intellij.psi.PsiPrimitiveType;
+import com.intellij.psi.PsiReferenceExpression;
+import com.intellij.psi.PsiType;
+import com.intellij.psi.PsiTypeCastExpression;
+import com.intellij.psi.PsiTypeElement;
+import com.intellij.psi.PsiVariable;
 import com.intellij.psi.impl.source.PsiClassReferenceType;
 import com.intellij.psi.tree.IElementType;
 import com.intellij.psi.util.ClassUtil;
 import com.intellij.psi.util.ConstantEvaluationOverflowException;
 import com.intellij.psi.util.ConstantExpressionUtil;
-import com.intellij.util.containers.StringInterner;
-import gnu.trove.THashSet;
+import com.intellij.psi.util.PsiUtil;
+import com.intellij.psi.util.PsiUtilCore;
+import com.intellij.util.containers.Interner;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentMap;
 
-@SuppressWarnings("UnnecessaryBoxing")
-class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstantEvaluationHelper.AuxEvaluator {
-  
-  private final StringInterner myInterner = new StringInterner();
+final class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstantEvaluationHelper.AuxEvaluator {
+  private final Interner<String> myInterner = Interner.createStringInterner();
 
   private Set<PsiVariable> myVisitedVars;
   private final Map<PsiElement, Object> myCachedValues = new HashMap<>();
@@ -67,13 +75,13 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
   }
 
   @Override
-  public void visitLiteralExpression(PsiLiteralExpression expression) {
+  public void visitLiteralExpression(@NotNull PsiLiteralExpression expression) {
     final Object value = expression.getValue();
     myResult = value instanceof String ? myInterner.intern((String)value) : value;
   }
 
   @Override
-  public void visitTypeCastExpression(PsiTypeCastExpression expression) {
+  public void visitTypeCastExpression(@NotNull PsiTypeCastExpression expression) {
     final PsiTypeElement castTypeElement = expression.getCastType();
 
     PsiExpression operand = expression.getOperand();
@@ -84,10 +92,15 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
     }
 
     PsiType castType = castTypeElement.getType();
+    // According to JLS 15.28 Constant Expressions, only casts to primitive types and to String type are considered constant
+    if (!(castType instanceof PsiPrimitiveType) && !castType.equalsToText(CommonClassNames.JAVA_LANG_STRING)) {
+      myResult = null;
+      return;
+    }
     myResult = ConstantExpressionUtil.computeCastTo(opValue, castType);
   }
 
-  @Override public void visitConditionalExpression(PsiConditionalExpression expression) {
+  @Override public void visitConditionalExpression(@NotNull PsiConditionalExpression expression) {
     Object then = getStoredValue(expression.getThenExpression());
     Object els = getStoredValue(expression.getElseExpression());
     Object condition = getStoredValue(expression.getCondition());
@@ -106,7 +119,11 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
   }
 
   @Override
-  public void visitPolyadicExpression(PsiPolyadicExpression expression) {
+  public void visitPolyadicExpression(@NotNull PsiPolyadicExpression expression) {
+    if (PsiUtilCore.hasErrorElementChild(expression)) {
+      myResult = null;
+      return;
+    }
     PsiExpression[] operands = expression.getOperands();
     Object lValue = getStoredValue(operands[0]);
     if (lValue == null) {
@@ -136,8 +153,8 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
     Object value = null;
     if (tokenType == JavaTokenType.PLUS) {
       if (lOperandValue instanceof String || rOperandValue instanceof String) {
-        String l = lOperandValue.toString();
-        String r = rOperandValue.toString();
+        String l = computeValueToString(lOperandValue);
+        String r = computeValueToString(rOperandValue);
         value = l + r;
       }
       else {
@@ -146,11 +163,11 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
 
         if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
           if (lOperandValue instanceof Double || rOperandValue instanceof Double) {
-            value = new Double(((Number)lOperandValue).doubleValue() + ((Number)rOperandValue).doubleValue());
+            value = Double.valueOf(((Number)lOperandValue).doubleValue() + ((Number)rOperandValue).doubleValue());
             checkRealNumberOverflow(value, lOperandValue, rOperandValue,expression);
           }
           else if (lOperandValue instanceof Float || rOperandValue instanceof Float) {
-            value = new Float(((Number)lOperandValue).floatValue() + ((Number)rOperandValue).floatValue());
+            value = Float.valueOf(((Number)lOperandValue).floatValue() + ((Number)rOperandValue).floatValue());
             checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
           }
           else if (lOperandValue instanceof Long || rOperandValue instanceof Long) {
@@ -173,11 +190,11 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
       if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
       if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
         if (lOperandValue instanceof Double || rOperandValue instanceof Double) {
-          value = new Double(((Number)lOperandValue).doubleValue() - ((Number)rOperandValue).doubleValue());
+          value = Double.valueOf(((Number)lOperandValue).doubleValue() - ((Number)rOperandValue).doubleValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Float || rOperandValue instanceof Float) {
-          value = new Float(((Number)lOperandValue).floatValue() - ((Number)rOperandValue).floatValue());
+          value = Float.valueOf(((Number)lOperandValue).floatValue() - ((Number)rOperandValue).floatValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Long || rOperandValue instanceof Long) {
@@ -195,68 +212,40 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
       }
     }
     else if (tokenType == JavaTokenType.ANDAND) {
-      if (lOperandValue instanceof Boolean && !((Boolean)lOperandValue).booleanValue() ||
-          rOperandValue instanceof Boolean && !((Boolean)rOperandValue).booleanValue()) {
-        value = Boolean.FALSE;
-      }
-      else if (lOperandValue instanceof Boolean && rOperandValue instanceof Boolean) {
+      if (lOperandValue instanceof Boolean && rOperandValue instanceof Boolean) {
         value = Boolean.valueOf(((Boolean)lOperandValue).booleanValue() && ((Boolean)rOperandValue).booleanValue());
+      }
+      else if (lOperandValue instanceof Boolean && !((Boolean)lOperandValue).booleanValue() ||
+               rOperandValue instanceof Boolean && !((Boolean)rOperandValue).booleanValue()) {
+        value = Boolean.FALSE;
       }
     }
     else if (tokenType == JavaTokenType.OROR) {
-      if (lOperandValue instanceof Boolean && ((Boolean)lOperandValue).booleanValue() ||
-          rOperandValue instanceof Boolean && ((Boolean)rOperandValue).booleanValue()) {
-        value = Boolean.TRUE;
-      }
-      else if (lOperandValue instanceof Boolean && rOperandValue instanceof Boolean) {
+      if (lOperandValue instanceof Boolean && rOperandValue instanceof Boolean) {
         value = Boolean.valueOf(((Boolean)lOperandValue).booleanValue() || ((Boolean)rOperandValue).booleanValue());
       }
-    }
-    else if (tokenType == JavaTokenType.LT) {
-      if (lOperandValue instanceof Character) lOperandValue = Integer.valueOf(((Character)lOperandValue).charValue());
-      if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
-      if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
-        value = Boolean.valueOf(((Number)lOperandValue).doubleValue() < ((Number)rOperandValue).doubleValue());
+      else if (lOperandValue instanceof Boolean && ((Boolean)lOperandValue).booleanValue() ||
+               rOperandValue instanceof Boolean && ((Boolean)rOperandValue).booleanValue()) {
+        value = Boolean.TRUE;
       }
     }
-    else if (tokenType == JavaTokenType.LE) {
-      if (lOperandValue instanceof Character) lOperandValue = Integer.valueOf(((Character)lOperandValue).charValue());
-      if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
-      if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
-        value = Boolean.valueOf(((Number)lOperandValue).doubleValue() <= ((Number)rOperandValue).doubleValue());
-      }
+    else if (tokenType == JavaTokenType.LT || tokenType == JavaTokenType.LE ||
+             tokenType == JavaTokenType.GT || tokenType == JavaTokenType.GE) {
+      value = compareNumbers(lOperandValue, rOperandValue, tokenType);
     }
-    else if (tokenType == JavaTokenType.GT) {
-      if (lOperandValue instanceof Character) lOperandValue = Integer.valueOf(((Character)lOperandValue).charValue());
-      if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
-      if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
-        value = Boolean.valueOf(((Number)lOperandValue).doubleValue() > ((Number)rOperandValue).doubleValue());
-      }
-    }
-    else if (tokenType == JavaTokenType.GE) {
-      if (lOperandValue instanceof Character) lOperandValue = Integer.valueOf(((Character)lOperandValue).charValue());
-      if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
-      if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
-        value = Boolean.valueOf(((Number)lOperandValue).doubleValue() >= ((Number)rOperandValue).doubleValue());
-      }
-    }
-    else if (tokenType == JavaTokenType.EQEQ) {
-      value = areValuesEqual(lOperandValue, rOperandValue, expression);
-    }
-    else if (tokenType == JavaTokenType.NE) {
-      Boolean eq = areValuesEqual(lOperandValue, rOperandValue, expression);
-      if (eq != null) value = !eq;
+    else if (tokenType == JavaTokenType.EQEQ || tokenType == JavaTokenType.NE) {
+      value = handleEqualityComparison(lOperandValue, rOperandValue, tokenType);
     }
     else if (tokenType == JavaTokenType.ASTERISK) {
       if (lOperandValue instanceof Character) lOperandValue = Integer.valueOf(((Character)lOperandValue).charValue());
       if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
       if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
         if (lOperandValue instanceof Double || rOperandValue instanceof Double) {
-          value = new Double(((Number)lOperandValue).doubleValue() * ((Number)rOperandValue).doubleValue());
+          value = Double.valueOf(((Number)lOperandValue).doubleValue() * ((Number)rOperandValue).doubleValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Float || rOperandValue instanceof Float) {
-          value = new Float(((Number)lOperandValue).floatValue() * ((Number)rOperandValue).floatValue());
+          value = Float.valueOf(((Number)lOperandValue).floatValue() * ((Number)rOperandValue).floatValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Long || rOperandValue instanceof Long) {
@@ -278,11 +267,11 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
       if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
       if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
         if (lOperandValue instanceof Double || rOperandValue instanceof Double) {
-          value = new Double(((Number)lOperandValue).doubleValue() / ((Number)rOperandValue).doubleValue());
+          value = Double.valueOf(((Number)lOperandValue).doubleValue() / ((Number)rOperandValue).doubleValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Float || rOperandValue instanceof Float) {
-          value = new Float(((Number)lOperandValue).floatValue() / ((Number)rOperandValue).floatValue());
+          value = Float.valueOf(((Number)lOperandValue).floatValue() / ((Number)rOperandValue).floatValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Long || rOperandValue instanceof Long) {
@@ -306,11 +295,11 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
         double rVal = ((Number)rOperandValue).doubleValue();
         if (myThrowExceptionOnOverflow && rVal == 0) throw new ConstantEvaluationOverflowException(expression);
         if (lOperandValue instanceof Double || rOperandValue instanceof Double) {
-          value = new Double(((Number)lOperandValue).doubleValue() % ((Number)rOperandValue).doubleValue());
+          value = Double.valueOf(((Number)lOperandValue).doubleValue() % ((Number)rOperandValue).doubleValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Float || rOperandValue instanceof Float) {
-          value = new Float(((Number)lOperandValue).floatValue() % ((Number)rOperandValue).floatValue());
+          value = Float.valueOf(((Number)lOperandValue).floatValue() % ((Number)rOperandValue).floatValue());
           checkRealNumberOverflow(value, lOperandValue, rOperandValue, expression);
         }
         else if (lOperandValue instanceof Long || rOperandValue instanceof Long) {
@@ -417,26 +406,68 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
     return value;
   }
 
-  @Nullable
-  private static Boolean areValuesEqual(Object lOperandValue, Object rOperandValue, PsiPolyadicExpression expression) {
-    if (lOperandValue instanceof Character) lOperandValue = Integer.valueOf(((Character)lOperandValue).charValue());
-    if (rOperandValue instanceof Character) rOperandValue = Integer.valueOf(((Character)rOperandValue).charValue());
-    if (lOperandValue instanceof Number && rOperandValue instanceof Number) {
-      return isBoxedComparison(expression) ? lOperandValue == rOperandValue
-                                           : ((Number)lOperandValue).doubleValue() == ((Number)rOperandValue).doubleValue();
+  private static String computeValueToString(Object value) {
+    if (value instanceof PsiType) {
+      if (value instanceof PsiArrayType) {
+        return "class " + ClassUtil.getClassObjectPresentation((PsiType)value);
+      }
+
+      PsiClass psiClass = PsiUtil.resolveClassInType((PsiType)value);
+      String prefix = psiClass == null ? "" : psiClass.isInterface() ? "interface " : "class ";
+      return prefix + ((PsiType)value).getCanonicalText();
     }
+    else {
+      return value.toString();
+    }
+  }
+
+  private static @Nullable Boolean handleEqualityComparison(Object lOperandValue, Object rOperandValue, IElementType tokenType) {
     if (lOperandValue instanceof String && rOperandValue instanceof String ||
         lOperandValue instanceof Boolean && rOperandValue instanceof Boolean) {
-      return lOperandValue.equals(rOperandValue);
+      return lOperandValue.equals(rOperandValue) == (tokenType == JavaTokenType.EQEQ);
     }
-    return null;
+    return compareNumbers(lOperandValue, rOperandValue, tokenType);
   }
 
-  private static boolean isBoxedComparison(PsiPolyadicExpression expression) {
-    return Arrays.stream(expression.getOperands()).anyMatch(op -> op.getType() instanceof PsiClassType);
+  private static Boolean compareNumbers(Object o1, Object o2, IElementType op) {
+    // JLS 15.20.1. Numerical Comparison Operators <, <=, >, and >=
+    // JLS 15.21.1. Numerical Equality Operators == and !=
+    // JLS 5.6.2 Binary Numeric Promotion
+    if (o1 instanceof Character) o1 = (int)((Character)o1).charValue();
+    if (o2 instanceof Character) o2 = (int)((Character)o2).charValue();
+    if (!(o1 instanceof Number) || !(o2 instanceof Number)) return null;
+    Number n1 = (Number)o1;
+    Number n2 = (Number)o2;
+    int result;
+    if (n1 instanceof Double || n2 instanceof Double) {
+      double v1 = n1.doubleValue();
+      double v2 = n2.doubleValue();
+      if (Double.isNaN(v1) || Double.isNaN(v2)) return op == JavaTokenType.NE;
+      //Cannot use Double.compare as we don't need special treatment of 0.0 and -0.0 here
+      //noinspection UseCompareMethod
+      result = v1 < v2 ? -1 : v1 == v2 ? 0 : 1;
+    } else if (n1 instanceof Float || n2 instanceof Float) {
+      float v1 = n1.floatValue();
+      float v2 = n2.floatValue();
+      if (Float.isNaN(v1) || Float.isNaN(v2)) return op == JavaTokenType.NE;
+      //Cannot use Float.compare as we don't need special treatment of 0.0 and -0.0 here
+      //noinspection UseCompareMethod
+      result = v1 < v2 ? -1 : v1 == v2 ? 0 : 1;
+    } else if (n1 instanceof Long || n2 instanceof Long) {
+      result = Long.compare(n1.longValue(), n2.longValue());
+    } else {
+      result = Integer.compare(n1.intValue(), n2.intValue());
+    }
+    if (op == JavaTokenType.EQEQ) return result == 0;
+    if (op == JavaTokenType.LT) return result < 0;
+    if (op == JavaTokenType.LE) return result <= 0;
+    if (op == JavaTokenType.GT) return result > 0;
+    if (op == JavaTokenType.GE) return result >= 0;
+    if (op == JavaTokenType.NE) return result != 0;
+    throw new IllegalArgumentException("Unexpected operator: " + op);
   }
 
-  @Override public void visitPrefixExpression(PsiPrefixExpression expression) {
+  @Override public void visitPrefixExpression(@NotNull PsiPrefixExpression expression) {
     PsiExpression operand = expression.getOperand();
     Object operandValue = getStoredValue(operand);
     if (operandValue == null) {
@@ -449,10 +480,10 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
       if (operandValue instanceof Character) operandValue = Integer.valueOf(((Character)operandValue).charValue());
       if (operandValue instanceof Number) {
         if (operandValue instanceof Double) {
-          value = new Double(-((Number)operandValue).doubleValue());
+          value = Double.valueOf(-((Number)operandValue).doubleValue());
         }
         else if (operandValue instanceof Float) {
-          value = new Float(-((Number)operandValue).floatValue());
+          value = Float.valueOf(-((Number)operandValue).floatValue());
         }
         else if (operandValue instanceof Long) {
           value = Long.valueOf(-((Number)operandValue).longValue());
@@ -498,17 +529,17 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
     myResult = value;
   }
 
-  @Override public void visitParenthesizedExpression(PsiParenthesizedExpression expression) {
+  @Override public void visitParenthesizedExpression(@NotNull PsiParenthesizedExpression expression) {
     myResult = getStoredValue(expression.getExpression());
   }
 
   @Override
-  public void visitMethodCallExpression(final PsiMethodCallExpression expression) {
+  public void visitMethodCallExpression(final @NotNull PsiMethodCallExpression expression) {
     myResult = myAuxEvaluator != null? myAuxEvaluator.computeExpression(expression, this) : null;
   }
 
   @Override
-  public void visitClassObjectAccessExpression(PsiClassObjectAccessExpression expression) {
+  public void visitClassObjectAccessExpression(@NotNull PsiClassObjectAccessExpression expression) {
     PsiType type = expression.getOperand().getType();
     if (type instanceof PsiClassReferenceType) {
       PsiClass aClass = ((PsiClassReferenceType)type).resolve();
@@ -519,7 +550,7 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
     myResult = type;
   }
 
-  @Override public void visitReferenceExpression(PsiReferenceExpression expression) {
+  @Override public void visitReferenceExpression(@NotNull PsiReferenceExpression expression) {
     PsiExpression qualifierExpression = expression.getQualifierExpression();
     while (qualifierExpression != null) {
       if (!(qualifierExpression instanceof PsiReferenceExpression)) {
@@ -534,26 +565,10 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
         myResult = null;
         return;
       }
-      qualifierExpression = ((PsiReferenceExpression) qualifierExpression).getQualifierExpression();
+      qualifierExpression = qualifier.getQualifierExpression();
     }
 
     PsiElement resolvedExpression = expression.resolve();
-    if (resolvedExpression instanceof PsiEnumConstant) {
-      String constant = ((PsiEnumConstant)resolvedExpression).getName();
-      if (constant == null) return;
-      PsiReferenceExpression qualifier = (PsiReferenceExpression)expression.getQualifier();
-      if (qualifier == null) return;
-      PsiElement element = qualifier.resolve();
-      if (!(element instanceof PsiClass)) return;
-      String name = ClassUtil.getJVMClassName((PsiClass)element);
-      try {
-        Class aClass = Class.forName(name);
-        //noinspection unchecked
-        myResult = Enum.valueOf(aClass, constant);
-      }
-      catch (Throwable ignore) { }
-      return;
-    }
     if (resolvedExpression instanceof PsiVariable) {
       PsiVariable variable = (PsiVariable) resolvedExpression;
       // avoid cycles
@@ -563,11 +578,15 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
       }
 
       Set<PsiVariable> oldVisitedVars = myVisitedVars;
-      if (myVisitedVars == null) { myVisitedVars = new THashSet<>(); }
+      if (myVisitedVars == null) {
+        myVisitedVars = new HashSet<>();
+      }
 
       myVisitedVars.add(variable);
       try {
-        myResult = variable instanceof PsiVariableEx? ((PsiVariableEx) variable).computeConstantValue(myVisitedVars) : null;
+        myResult = variable instanceof PsiVariableEx && !(variable instanceof PsiEnumConstant) 
+                   ? ((PsiVariableEx) variable).computeConstantValue(myVisitedVars)
+                   : null;
         if (myResult == null && myAuxEvaluator != null) myResult = myAuxEvaluator.computeExpression(expression, this);
         return;
       }
@@ -614,13 +633,12 @@ class ConstantExpressionVisitor extends JavaElementVisitor implements PsiConstan
   }
 
   @Override
-  public Object computeExpression(@NotNull final PsiExpression expression, @NotNull final PsiConstantEvaluationHelper.AuxEvaluator auxEvaluator) {
+  public Object computeExpression(final @NotNull PsiExpression expression, final @NotNull PsiConstantEvaluationHelper.AuxEvaluator auxEvaluator) {
     return JavaConstantExpressionEvaluator.computeConstantExpression(expression, myVisitedVars, myThrowExceptionOnOverflow, auxEvaluator);
   }
 
-  @NotNull
   @Override
-  public ConcurrentMap<PsiElement, Object> getCacheMap(final boolean overflow) {
+  public @NotNull ConcurrentMap<PsiElement, Object> getCacheMap(final boolean overflow) {
     throw new AssertionError("should not be called");
   }
 }
