@@ -1,35 +1,18 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.completion;
 
 import com.intellij.codeInsight.lookup.LookupElement;
 import com.intellij.codeInsight.lookup.LookupManager;
 import com.intellij.codeInsight.lookup.impl.LookupImpl;
-import com.intellij.testFramework.LightCodeInsightTestCase;
-import java.util.HashSet;
+import com.intellij.testFramework.LightJavaCodeInsightTestCase;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.Set;
 
-/**
- * @author mike
- */
-public abstract class LightCompletionTestCase extends LightCodeInsightTestCase {
+public abstract class LightCompletionTestCase extends LightJavaCodeInsightTestCase {
   protected String myPrefix;
   protected LookupElement[] myItems;
   private CompletionType myType = CompletionType.BASIC;
@@ -38,16 +21,19 @@ public abstract class LightCompletionTestCase extends LightCodeInsightTestCase {
   protected void tearDown() throws Exception {
     try {
       myItems = null;
-      LookupManager.getInstance(getProject()).hideActiveLookup();
+    }
+    catch (Throwable e) {
+      addSuppressedException(e);
     }
     finally {
+
       super.tearDown();
     }
   }
 
   @Override
-  protected void configureByFile(@NotNull String filePath) {
-    super.configureByFile(filePath);
+  protected void configureByFile(@NotNull String relativePath) {
+    super.configureByFile(relativePath);
 
     complete();
   }
@@ -59,9 +45,9 @@ public abstract class LightCompletionTestCase extends LightCodeInsightTestCase {
   protected void complete(final int time) {
     new CodeCompletionHandlerBase(myType).invokeCompletion(getProject(), getEditor(), time);
 
-    LookupImpl lookup = (LookupImpl)LookupManager.getActiveLookup(myEditor);
+    LookupImpl lookup = (LookupImpl)LookupManager.getActiveLookup(getEditor());
     myItems = lookup == null ? null : lookup.getItems().toArray(LookupElement.EMPTY_ARRAY);
-    myPrefix = lookup == null ? null : lookup.itemPattern(lookup.getItems().get(0));
+    myPrefix = lookup == null ? null : lookup.itemPattern(lookup.getItems().getFirst());
   }
 
   public void setType(CompletionType type) {
@@ -83,7 +69,6 @@ public abstract class LightCompletionTestCase extends LightCodeInsightTestCase {
     }
   }
 
-  @SuppressWarnings("TestMethodWithIncorrectSignature")
   protected void testByCount(int finalCount, String... values) {
     if (myItems == null) {
       assertEquals(0, finalCount);
@@ -133,7 +118,7 @@ public abstract class LightCompletionTestCase extends LightCodeInsightTestCase {
     return actual;
   }
 
-  protected static LookupImpl getLookup() {
-    return (LookupImpl)LookupManager.getActiveLookup(myEditor);
+  protected LookupImpl getLookup() {
+    return (LookupImpl)LookupManager.getActiveLookup(getEditor());
   }
 }
