@@ -1,74 +1,94 @@
-/*
- * Copyright 2000-2014 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.artifacts;
 
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.util.SmartList;
 import com.intellij.util.io.DataExternalizer;
 import com.intellij.util.io.IOUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.jps.incremental.relativizer.PathRelativizerService;
 import org.jetbrains.jps.incremental.storage.AbstractStateStorage;
-import org.jetbrains.jps.incremental.storage.PathStringDescriptor;
+import org.jetbrains.jps.incremental.storage.PathStringDescriptors;
 
-import java.io.*;
-import java.util.Collections;
+import java.io.DataInput;
+import java.io.DataInputStream;
+import java.io.DataOutput;
+import java.io.File;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
- * Stores source paths for each output path. If a source file or an output file is located in a jar file the path to the jar file is stored.
- *
- * @author nik
+ * Stores source paths for each output path.
+ * If a source file or an output file is located in a jar file, the path to the jar file is stored.
  */
-public class ArtifactOutputToSourceMapping extends AbstractStateStorage<String, List<ArtifactOutputToSourceMapping.SourcePathAndRootIndex>> {
-  public ArtifactOutputToSourceMapping(File storePath) throws IOException {
-    super(storePath, PathStringDescriptor.INSTANCE, new SourcePathListExternalizer());
+public final class ArtifactOutputToSourceMapping
+  extends AbstractStateStorage<String, List<ArtifactOutputToSourceMapping.SourcePathAndRootIndex>> {
+  private final PathRelativizerService myRelativizer;
+
+  public ArtifactOutputToSourceMapping(File storePath, PathRelativizerService relativizer) throws IOException {
+    super(storePath, PathStringDescriptors.createPathStringDescriptor(), new SourcePathListExternalizer());
+    myRelativizer = relativizer;
   }
 
   @Override
   public void update(String path, @Nullable List<SourcePathAndRootIndex> state) throws IOException {
-    super.update(FileUtil.toSystemIndependentName(path), state);
+    super.update(normalizePath(path), state == null ? null : normalizePaths(state));
   }
 
   @Override
   public void appendData(String path, List<SourcePathAndRootIndex> data) throws IOException {
-    super.appendData(FileUtil.toSystemIndependentName(path), data);
+    super.appendData(normalizePath(path), data == null ? null : normalizePaths(data));
   }
 
   public void appendData(String outputPath, int rootIndex, String sourcePath) throws IOException {
-    super.appendData(outputPath, Collections.singletonList(new SourcePathAndRootIndex(sourcePath, rootIndex)));
+    super.appendData(normalizePath(outputPath), List.of(new SourcePathAndRootIndex(normalizePath(sourcePath), rootIndex)));
   }
 
   @Override
   public void remove(String path) throws IOException {
-    super.remove(FileUtil.toSystemIndependentName(path));
+    super.remove(normalizePath(path));
   }
 
-  @Nullable
   @Override
-  public List<SourcePathAndRootIndex> getState(String path) throws IOException {
-    return super.getState(FileUtil.toSystemIndependentName(path));
+  public @Nullable List<SourcePathAndRootIndex> getState(String path) throws IOException {
+    List<SourcePathAndRootIndex> list = super.getState(normalizePath(path));
+    if (list == null) {
+      return null;
+    }
+    else {
+      if (list.isEmpty()) {
+        return List.of();
+      }
+
+      SourcePathAndRootIndex[] result = new SourcePathAndRootIndex[list.size()];
+      for (int i = 0; i < list.size(); i++) {
+        ArtifactOutputToSourceMapping.SourcePathAndRootIndex t = list.get(i);
+        result[i] = new SourcePathAndRootIndex(myRelativizer.toFull(t.myPath), t.myRootIndex);
+      }
+      return Arrays.asList(result);
+    }
   }
 
-  public static class SourcePathAndRootIndex {
+  private String normalizePath(@NotNull String path) {
+    return myRelativizer.toRelative(path);
+  }
+
+  private List<SourcePathAndRootIndex> normalizePaths(@NotNull List<SourcePathAndRootIndex> state) {
+    SourcePathAndRootIndex[] result = new SourcePathAndRootIndex[state.size()];
+    for (int i = 0, size = state.size(); i < size; i++) {
+      SourcePathAndRootIndex it = state.get(i);
+      result[i] = new SourcePathAndRootIndex(normalizePath(it.myPath), it.myRootIndex);
+    }
+    return Arrays.asList(result);
+  }
+
+  public static final class SourcePathAndRootIndex {
     private final String myPath;
     private final int myRootIndex;
 
     private SourcePathAndRootIndex(String path, int rootIndex) {
-      myPath = FileUtil.toSystemIndependentName(path);
+      myPath = path;
       myRootIndex = rootIndex;
     }
 
@@ -81,7 +101,7 @@ public class ArtifactOutputToSourceMapping extends AbstractStateStorage<String, 
     }
   }
 
-  private static class SourcePathListExternalizer implements DataExternalizer<List<SourcePathAndRootIndex>> {
+  private static final class SourcePathListExternalizer implements DataExternalizer<List<SourcePathAndRootIndex>> {
     @Override
     public void save(@NotNull DataOutput out, List<SourcePathAndRootIndex> value) throws IOException {
       for (SourcePathAndRootIndex pair : value) {
@@ -92,11 +112,11 @@ public class ArtifactOutputToSourceMapping extends AbstractStateStorage<String, 
 
     @Override
     public List<SourcePathAndRootIndex> read(@NotNull DataInput in) throws IOException {
-      List<SourcePathAndRootIndex> result = new SmartList<>();
-      final DataInputStream stream = (DataInputStream)in;
+      List<SourcePathAndRootIndex> result = new ArrayList<>();
+      DataInputStream stream = (DataInputStream)in;
       while (stream.available() > 0) {
-        final String path = IOUtil.readUTF(stream);
-        final int index = stream.readInt();
+        String path = IOUtil.readUTF(stream);
+        int index = stream.readInt();
         result.add(new SourcePathAndRootIndex(path, index));
       }
       return result;
