@@ -1,11 +1,13 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.template.postfix.templates.editable;
 
+import com.intellij.codeInsight.CodeInsightBundle;
 import com.intellij.codeInsight.template.Template;
 import com.intellij.codeInsight.template.TemplateManager;
 import com.intellij.codeInsight.template.impl.TemplateImpl;
 import com.intellij.codeInsight.template.impl.TextExpression;
 import com.intellij.codeInsight.template.postfix.templates.PostfixLiveTemplate;
+import com.intellij.codeInsight.template.postfix.templates.PostfixModExpander;
 import com.intellij.codeInsight.template.postfix.templates.PostfixTemplate;
 import com.intellij.codeInsight.template.postfix.templates.PostfixTemplateProvider;
 import com.intellij.codeInsight.template.postfix.templates.PostfixTemplatesUtils;
@@ -17,19 +19,28 @@ import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Pass;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.TextRange;
 import com.intellij.psi.PsiElement;
 import com.intellij.refactoring.IntroduceTargetChooser;
 import com.intellij.util.Function;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.List;
 import java.util.Objects;
 
-@ApiStatus.Experimental
+/**
+ * Base class for editable templates.
+ * Template data is backed by live template.
+ * It supports selecting the expression a template is applied to.
+ *
+ * @see EditablePostfixTemplateWithMultipleExpressions
+ * @see <a href="https://plugins.jetbrains.com/docs/intellij/advanced-postfix-templates.html">Advanced Postfix Templates (IntelliJ Platform Docs)</a>
+ */
 public abstract class EditablePostfixTemplate extends PostfixTemplate {
-  @NotNull private final TemplateImpl myLiveTemplate;
+  private final @NotNull TemplateImpl myLiveTemplate;
 
   public EditablePostfixTemplate(@NotNull String templateId,
                                  @NotNull String templateName,
@@ -50,13 +61,12 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
     myLiveTemplate = liveTemplate;
   }
 
-  @NotNull
-  public TemplateImpl getLiveTemplate() {
+  public @NotNull TemplateImpl getLiveTemplate() {
     return myLiveTemplate;
   }
 
   @Override
-  public final void expand(@NotNull PsiElement context, @NotNull final Editor editor) {
+  public final void expand(@NotNull PsiElement context, final @NotNull Editor editor) {
     List<PsiElement> expressions = getExpressions(context, editor.getDocument(), editor.getCaretModel().getOffset());
 
     if (expressions.isEmpty()) {
@@ -65,7 +75,7 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
     }
 
     if (expressions.size() == 1) {
-      prepareAndExpandForChooseExpression(expressions.get(0), editor);
+      prepareAndExpandForChooseExpression(expressions.getFirst(), editor);
       return;
     }
 
@@ -78,22 +88,22 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
 
     IntroduceTargetChooser.showChooser(
       editor, expressions,
-      new Pass<PsiElement>() {
-        public void pass(@NotNull final PsiElement e) {
+      new Pass<>() {
+        @Override
+        public void pass(final @NotNull PsiElement e) {
           prepareAndExpandForChooseExpression(e, editor);
         }
       },
       getElementRenderer(),
-      "Expressions", 0, ScopeHighlighter.NATURAL_RANGER
+      CodeInsightBundle.message("dialog.title.expressions"), 0, ScopeHighlighter.NATURAL_RANGER
     );
   }
 
   @Override
   public boolean equals(Object o) {
     if (this == o) return true;
-    if (!(o instanceof EditablePostfixTemplate)) return false;
+    if (!(o instanceof EditablePostfixTemplate template)) return false;
     if (!super.equals(o)) return false;
-    EditablePostfixTemplate template = (EditablePostfixTemplate)o;
     return Objects.equals(myLiveTemplate, template.myLiveTemplate);
   }
 
@@ -102,29 +112,47 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
     return Objects.hash(getKey(), myLiveTemplate);
   }
 
-  protected abstract List<PsiElement> getExpressions(@NotNull PsiElement context, @NotNull Document document, int offset);
+  protected abstract @Unmodifiable List<PsiElement> getExpressions(@NotNull PsiElement context, @NotNull Document document, int offset);
 
   @Override
   public boolean isApplicable(@NotNull PsiElement context, @NotNull Document copyDocument, int newOffset) {
     return !getExpressions(context, copyDocument, newOffset).isEmpty();
   }
 
+  @ApiStatus.Experimental
+  @Override
+  public @NotNull PostfixModExpander createModExpander() {
+    return new EditableTemplateModExpander(this);
+  }
+
   protected void addTemplateVariables(@NotNull PsiElement element, @NotNull Template template) {
   }
 
-  @NotNull
-  protected PsiElement getElementToRemove(@NotNull PsiElement element) {
+  /**
+   * @param element element to which the template was applied
+   * @return an element to remove before inserting the template
+   */
+  protected @NotNull PsiElement getElementToRemove(@NotNull PsiElement element) {
     return element;
   }
 
-  @NotNull
-  protected Function<PsiElement, String> getElementRenderer() {
+  /**
+   * Default implementation delegates to {@link #getElementToRemove(PsiElement)} and takes the text range of the resulting element.
+   * Override it if it's desired to remove only a part of {@code PsiElement}'s range.
+   *
+   * @param element element to which the template was applied
+   * @return a range to remove before inserting the template
+   */
+  protected @NotNull TextRange getRangeToRemove(@NotNull PsiElement element) {
+    return getElementToRemove(element).getTextRange();
+  }
+
+  protected @NotNull Function<PsiElement, String> getElementRenderer() {
     return element -> element.getText();
   }
 
-  @NotNull
   @Override
-  public PostfixTemplateProvider getProvider() {
+  public @NotNull PostfixTemplateProvider getProvider() {
     PostfixTemplateProvider provider = super.getProvider();
     assert provider != null;
     return provider;
@@ -133,15 +161,16 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
   private void prepareAndExpandForChooseExpression(@NotNull PsiElement element, @NotNull Editor editor) {
     ApplicationManager.getApplication().runWriteAction(
       () -> CommandProcessor.getInstance().executeCommand(
-        element.getProject(), () -> expandForChooseExpression(element, editor), "Expand postfix template",
+        element.getProject(), () -> expandForChooseExpression(element, editor),
+        CodeInsightBundle.message("command.expand.postfix.template"),
         PostfixLiveTemplate.POSTFIX_TEMPLATE_ID));
   }
 
   private void expandForChooseExpression(@NotNull PsiElement element, @NotNull Editor editor) {
     Project project = element.getProject();
     Document document = editor.getDocument();
-    PsiElement elementToRemove = getElementToRemove(element);
-    document.deleteString(elementToRemove.getTextRange().getStartOffset(), elementToRemove.getTextRange().getEndOffset());
+    TextRange range = getRangeToRemove(element);
+    document.deleteString(range.getStartOffset(), range.getEndOffset());
     TemplateManager manager = TemplateManager.getInstance(project);
 
     TemplateImpl template = myLiveTemplate.copy();
