@@ -1,47 +1,39 @@
-/*
- * Copyright 2000-2009 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.util.ui;
 
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.MultiLineLabelUI;
+import com.intellij.openapi.util.NlsActions.ActionText;
+import com.intellij.openapi.util.NlsContexts;
 import org.jetbrains.annotations.NotNull;
 
-import javax.swing.*;
-import java.awt.*;
+import javax.swing.Action;
+import javax.swing.Icon;
+import javax.swing.JComponent;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+import java.awt.BorderLayout;
+import java.awt.Container;
 
 public abstract class OptionsMessageDialog extends OptionsDialog{
-  private final String myMessage;
+  private final @NlsContexts.Label String myMessage;
   private final Icon myIcon;
 
   protected OptionsMessageDialog(Project project,
-                                 final String message,
-                                 String title,
+                                 @NlsContexts.Label String message,
+                                 @NlsContexts.DialogTitle String title,
                                  final Icon icon) {
     super(project);
     myMessage = message;
     myIcon = icon;
     setTitle(title);
-    setButtonsAlignment(SwingUtilities.CENTER);
   }
 
-  protected abstract String getOkActionName();
-  protected abstract String getCancelActionName();
+  protected abstract @ActionText String getOkActionName();
+  protected abstract @ActionText String getCancelActionName();
 
-  @NotNull
-  protected Action[] createActions() {
+  @Override
+  protected Action @NotNull [] createActions() {
     final Action okAction = getOKAction();
     final Action cancelAction = getCancelAction();
     assignMnemonic(getOkActionName(), okAction);
@@ -49,19 +41,20 @@ public abstract class OptionsMessageDialog extends OptionsDialog{
     return new Action[]{okAction,cancelAction};
   }
 
-  protected static void assignMnemonic(String option, Action action) {
+  protected static void assignMnemonic(@ActionText String option, Action action) {
     action.putValue(Action.NAME, option);
 
     int mnemoPos = option.indexOf("&");
     if (mnemoPos >= 0 && mnemoPos < option.length() - 2) {
       String mnemoChar = option.substring(mnemoPos + 1, mnemoPos + 2).trim();
       if (mnemoChar.length() == 1) {
-        action.putValue(Action.MNEMONIC_KEY, new Integer(mnemoChar.charAt(0)));
+        action.putValue(Action.MNEMONIC_KEY, Integer.valueOf(mnemoChar.charAt(0)));
       }
     }
   }
 
-  protected JComponent createNorthPanel() {
+  @Override
+  protected @NotNull JComponent createNorthPanel() {
     JPanel panel = new JPanel(new BorderLayout(15, 0));
     if (myIcon != null) {
       JLabel iconLabel = new JLabel(myIcon);
@@ -79,6 +72,7 @@ public abstract class OptionsMessageDialog extends OptionsDialog{
     return panel;
   }
 
+  @Override
   protected JComponent createCenterPanel() {
     return null;
   }
