@@ -1,128 +1,208 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
- */
+// Copyright 2000-2026 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.editor.impl.view;
 
-import com.intellij.openapi.diagnostic.Attachment;
-import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.editor.*;
+import com.intellij.openapi.editor.CustomFoldRegion;
+import com.intellij.openapi.editor.Document;
+import com.intellij.openapi.editor.FoldRegion;
+import com.intellij.openapi.editor.Inlay;
+import com.intellij.openapi.editor.LogicalPosition;
+import com.intellij.openapi.editor.SoftWrap;
+import com.intellij.openapi.editor.VisualPosition;
 import com.intellij.openapi.editor.ex.EditorEx;
+import com.intellij.openapi.editor.ex.InlayModelEx;
 import com.intellij.openapi.editor.ex.util.EditorUtil;
-import com.intellij.openapi.editor.impl.EditorImpl;
-import com.intellij.openapi.editor.impl.FoldingModelImpl;
+import com.intellij.openapi.editor.impl.FoldingKeys;
+import com.intellij.openapi.editor.impl.FoldingModelInternal;
 import com.intellij.openapi.editor.impl.SoftWrapModelImpl;
 import com.intellij.openapi.editor.impl.softwrap.SoftWrapDrawingType;
+import com.intellij.openapi.editor.impl.softwrap.SoftWrapEx;
 import com.intellij.util.DocumentUtil;
+import com.intellij.util.IntPair;
+import com.intellij.util.ObjectUtils;
 import org.jetbrains.annotations.NotNull;
 
-import javax.swing.*;
+import javax.swing.JScrollBar;
+import java.awt.Insets;
 import java.awt.geom.Point2D;
 import java.util.List;
 
 /**
- * Performs transformations between various location representations in editor 
+ * Performs transformations between various location representations in editor
  * (offset, logical position, visual position, pixel coordinates).
- * 
+ *
  * @see LogicalPosition
  * @see VisualPosition
  */
-class EditorCoordinateMapper {
-  private static final Logger LOG = Logger.getInstance(EditorCoordinateMapper.class);
-
+final class EditorCoordinateMapper {
   private final EditorView myView;
   private final Document myDocument;
-  private final FoldingModelImpl myFoldingModel;
-  
-  EditorCoordinateMapper(EditorView view) {
+  private final FoldingModelInternal myFoldingModel;
+  private final InlayModelEx myInlayModel;
+  private final SoftWrapModelImpl mySoftWrapModel;
+  private final LogicalPositionCache myLogicalPositionCache;
+
+  EditorCoordinateMapper(EditorView view, LogicalPositionCache logicalPositionCache) {
     myView = view;
-    myDocument = myView.getEditor().getDocument();
-    myFoldingModel = myView.getEditor().getFoldingModel();
+    myDocument = myView.getDocument();
+    myFoldingModel = myView.getFoldingModel();
+    myInlayModel = myView.getInlayModel();
+    mySoftWrapModel = myView.getSoftWrapModel();
+    myLogicalPositionCache = logicalPositionCache;
+  }
+
+  int @NotNull [] visualLineToYRange(int line) {
+    if (line < 0) {
+      line = 0;
+    }
+    int offset = line >= getVisibleLineCount()
+                 ? myDocument.getTextLength() + 1
+                 : visualLineToOffset(line);
+    int lineHeight = getLineHeight();
+    int idx = myFoldingModel.getLastCollapsedRegionBefore(offset);
+    IntPair adjustment = myFoldingModel.getCustomRegionsYAdjustment(offset, idx);
+    int startY = getInsets().top
+                 + line * lineHeight
+                 + adjustment.first
+                 + myInlayModel.getHeightOfBlockElementsBeforeVisualLine(line, offset, idx);
+    int endY = startY + lineHeight + adjustment.second;
+    return new int[] { startY, endY };
   }
 
   int visualLineToY(int line) {
-    return myView.getInsets().top + Math.max(0, line) * myView.getLineHeight();
+    return visualLineToYRange(line)[0];
   }
 
   int yToVisualLine(int y) {
-    return Math.max(0, y - myView.getInsets().top) / myView.getLineHeight();
+    int lineHeight = getLineHeight();
+    if (y < lineHeight) {
+      return 0;
+    }
+    int lineMin = 0;
+    int yMin = 0;
+    int lineMax = getVisibleLineCount() - 1;
+    int yMax = visualLineToY(lineMax + 1);
+    if (y >= yMax) {
+      return lineMax + 1 + (y - yMax) / lineHeight;
+    }
+    while (lineMin < lineMax) {
+      if ((yMax - yMin) == (lineMax - lineMin + 1) * lineHeight) {
+        return lineMin + (y - yMin) / lineHeight;
+      }
+      int lineMid = (lineMin + lineMax) / 2;
+      int[] yMidRange = visualLineToYRange(lineMid);
+      if (y < yMidRange[0]) {
+        int yMidMin = yMidRange[0] - getInlaysHeight(lineMid, true);
+        if (y >= yMidMin) {
+          return lineMid;
+        }
+        lineMax = lineMid - 1;
+        yMax = yMidMin;
+      } else {
+        int yMidMax = yMidRange[1] + getInlaysHeight(lineMid, false);
+        if (y < yMidMax) {
+          return lineMid;
+        }
+        lineMin = lineMid + 1;
+        yMin = yMidMax;
+      }
+    }
+    return lineMin;
   }
 
-  @NotNull
-  LogicalPosition offsetToLogicalPosition(int offset) {
-    return myView.getLogicalPositionCache().offsetToLogicalPosition(offset);
+  /**
+   * Safe without read action
+   */
+  @NotNull LogicalPosition offsetToLogicalPosition(int offset) {
+    return myLogicalPositionCache.offsetToLogicalPosition(offset);
   }
 
+  /**
+   * Safe without read action
+   */
+  int offsetToLogicalColumn(int line, int intraLineOffset) {
+    return myLogicalPositionCache.offsetToLogicalColumn(line, intraLineOffset);
+  }
+
+  /**
+   * Safe without read action
+   */
   int logicalPositionToOffset(@NotNull LogicalPosition pos) {
-    return myView.getLogicalPositionCache().logicalPositionToOffset(pos);
+    return myLogicalPositionCache.logicalPositionToOffset(pos);
   }
 
-  @NotNull
-  VisualPosition logicalToVisualPosition(@NotNull LogicalPosition pos, boolean beforeSoftWrap) {
+  @NotNull VisualPosition logicalToVisualPosition(@NotNull LogicalPosition pos, boolean beforeSoftWrap) {
     int line = pos.line;
     int column = pos.column;
-    int logicalLineCount = myDocument.getLineCount();
+    int logicalLineCount = Math.max(1, myDocument.getLineCount());
     if (line >= logicalLineCount) {
-      return new VisualPosition(line - logicalLineCount + myView.getEditor().getVisibleLineCount(), column, pos.leansForward);
+      return new VisualPosition(
+        line - logicalLineCount + getVisibleLineCount(),
+        column,
+        pos.leansForward
+      );
     }
     int offset = logicalPositionToOffset(pos);
     int visualLine = offsetToVisualLine(offset, beforeSoftWrap);
     int maxVisualColumn = 0;
     int maxLogicalColumn = 0;
-    for (VisualLineFragmentsIterator.Fragment fragment : VisualLineFragmentsIterator.create(myView, offset, beforeSoftWrap)) {
+    int endLogicalLine = line;
+    for (var fragment : createVisualLineFragmentsIterator(offset, beforeSoftWrap, false)) {
       if (!pos.leansForward && offset == fragment.getVisualLineStartOffset()) {
         return new VisualPosition(visualLine, fragment.getStartVisualColumn());
       }
-      if (fragment.isCollapsedFoldRegion()) {
+      endLogicalLine = fragment.getEndLogicalLine();
+      maxVisualColumn = fragment.getEndVisualColumn();
+      FoldRegion foldRegion = fragment.getCurrentFoldRegion();
+      if (foldRegion != null) {
+        if (foldRegion instanceof CustomFoldRegion) {
+          return new VisualPosition(visualLine, 0);
+        }
         int startLogicalLine = fragment.getStartLogicalLine();
-        int endLogicalLine = fragment.getEndLogicalLine();
         int startLogicalColumn = fragment.getStartLogicalColumn();
         int endLogicalColumn = fragment.getEndLogicalColumn();
-        if ((line > startLogicalLine || line == startLogicalLine && (column > startLogicalColumn ||
-                                                                     column == startLogicalColumn && pos.leansForward)) &&
+        if ((line > startLogicalLine || line == startLogicalLine && (column > startLogicalColumn || column == startLogicalColumn && pos.leansForward)) &&
             (line < endLogicalLine || line == endLogicalLine && column < endLogicalColumn)) {
           return new VisualPosition(visualLine, fragment.getStartVisualColumn(), true);
         }
         if (line == endLogicalLine && column == endLogicalColumn && !pos.leansForward) {
-          return new VisualPosition(visualLine, fragment.getEndVisualColumn());
+          return new VisualPosition(visualLine, maxVisualColumn);
         }
-        maxLogicalColumn = startLogicalLine == endLogicalLine ? Math.max(maxLogicalColumn, endLogicalColumn) : endLogicalColumn;
-      }
-      else if (fragment.getCurrentInlay() == null) {
+        maxLogicalColumn = startLogicalLine == endLogicalLine
+                           ? Math.max(maxLogicalColumn, endLogicalColumn)
+                           : endLogicalColumn;
+      } else if (fragment.getCurrentInlay() == null) {
         int minColumn = fragment.getMinLogicalColumn();
         int maxColumn = fragment.getMaxLogicalColumn();
         if (line == fragment.getStartLogicalLine() &&
             (column > minColumn && column < maxColumn ||
              column == minColumn && pos.leansForward ||
              column == maxColumn && !pos.leansForward)) {
-          return new VisualPosition(visualLine, fragment.logicalToVisualColumn(column), fragment.isRtl() ^ pos.leansForward);
+          return new VisualPosition(
+            visualLine,
+            fragment.logicalToVisualColumn(column),
+            fragment.isRtl() ^ pos.leansForward
+          );
         }
         maxLogicalColumn = Math.max(maxLogicalColumn, maxColumn);
       }
-      maxVisualColumn = fragment.getEndVisualColumn();
     }
-    int resultColumn = column - maxLogicalColumn + maxVisualColumn;
+    int resultColumn = maxVisualColumn + logToVisWithInlays(endLogicalLine, column - maxLogicalColumn, pos.leansForward);
     if (resultColumn < 0) {
-      if (maxVisualColumn > maxLogicalColumn) {
-        resultColumn = Integer.MAX_VALUE; // guarding against overflow
-      }
-      else {
-        LOG.error("Error converting " + pos + " to visual position",
-                  new Attachment("details.txt", String.format("offset: %d, visual line: %d, max logical column: %d, max visual column: %d",
-                                                              offset, visualLine, maxLogicalColumn, maxVisualColumn)),
-                  new Attachment("dump.txt", myView.getEditor().dumpState()));
-        resultColumn = 0;
-      }
+      resultColumn = Integer.MAX_VALUE; // guarding against overflow
     }
     return new VisualPosition(visualLine, resultColumn, pos.leansForward);
   }
 
-  @NotNull
-  LogicalPosition visualToLogicalPosition(@NotNull VisualPosition pos) {
+  @NotNull LogicalPosition visualToLogicalPosition(@NotNull VisualPosition pos) {
     int line = pos.line;
     int column = pos.column;
-    int visualLineCount = myView.getEditor().getVisibleLineCount();
+    int visualLineCount = getVisibleLineCount();
     if (line >= visualLineCount) {
-      return new LogicalPosition(line - visualLineCount + myDocument.getLineCount(), column, pos.leansRight);
+      return new LogicalPosition(
+        line - visualLineCount + myDocument.getLineCount(),
+        column,
+        pos.leansRight
+      );
     }
     int offset = visualLineToOffset(line);
     int logicalLine = myDocument.getLineNumber(offset);
@@ -130,52 +210,76 @@ class EditorCoordinateMapper {
     int maxLogicalColumn = 0;
     int maxOffset = offset;
     LogicalPosition delayedResult = null;
-    for (VisualLineFragmentsIterator.Fragment fragment : VisualLineFragmentsIterator.create(myView, offset, false)) {
-      if (delayedResult != null) return delayedResult.leanForward(fragment.getCurrentInlay() == null);
+    boolean delayedInlay = false;
+    for (var fragment : createVisualLineFragmentsIterator(offset, false, false)) {
+      FoldRegion foldRegion = fragment.getCurrentFoldRegion();
+      if (foldRegion instanceof CustomFoldRegion) {
+        return new LogicalPosition(fragment.getStartLogicalLine(), fragment.getStartLogicalColumn());
+      }
       int minColumn = fragment.getStartVisualColumn();
       int maxColumn = fragment.getEndVisualColumn();
-      if (column < minColumn || column == minColumn && !pos.leansRight) {
+      if (delayedResult != null) {
+        LogicalPosition possibleResult = delayedInlay
+                                         ? delayedResult.leanForward(fragment.getCurrentInlay() == null)
+                                         : delayedResult;
+        if (minColumn != maxColumn) {
+          return possibleResult;
+        }
+        // Please see documentation of FoldingKeys.ADDITIONAL_CARET_POSITION_FOR_EMPTY_PLACEHOLDER
+        if (column == minColumn && foldRegion != null && !foldRegion.isExpanded() && foldRegion.getPlaceholderText().isEmpty()) {
+          if (foldRegion.getUserData(FoldingKeys.ADDITIONAL_CARET_POSITION_FOR_EMPTY_PLACEHOLDER) != null) {
+            return possibleResult;
+          }
+        }
+      }
+      if (column < minColumn || column == minColumn && !pos.leansRight && minColumn != maxColumn) {
         return offsetToLogicalPosition(offset);
       }
       if (column > minColumn && column < maxColumn ||
           column == minColumn ||
           column == maxColumn && !pos.leansRight) {
-        if (column == maxColumn && fragment.getCurrentInlay() != null) {
-          // for visual positions between adjacent inlays, we return same result as for visual position before the first one
-          delayedResult = new LogicalPosition(fragment.getEndLogicalLine(), fragment.getEndLogicalColumn(), true);
-        }
-        else {
-          return new LogicalPosition(column == maxColumn ? fragment.getEndLogicalLine() : fragment.getStartLogicalLine(),
-                                     fragment.visualToLogicalColumn(column),
-                                     fragment.isCollapsedFoldRegion() ? column < maxColumn :
-                                     fragment.getCurrentInlay() == null && fragment.isRtl() ^ pos.leansRight);
+        // for visual positions between adjacent inlays, we return same result as for visual position before the first one
+        delayedInlay = fragment.getCurrentInlay() != null;
+        delayedResult = new LogicalPosition(
+          column == maxColumn ? fragment.getEndLogicalLine() : fragment.getStartLogicalLine(),
+          fragment.visualToLogicalColumn(column),
+          foldRegion != null ? column < maxColumn : !delayedInlay && fragment.isRtl() ^ pos.leansRight
+        );
+        // delaying result to check whether there's an 'invisible' fold region going next
+        if (column != maxColumn) {
+          return delayedResult;
         }
       }
-      maxLogicalColumn = logicalLine == fragment.getEndLogicalLine() ? Math.max(maxLogicalColumn, fragment.getMaxLogicalColumn()) : 
-                         fragment.getMaxLogicalColumn();
+      maxLogicalColumn = logicalLine == fragment.getEndLogicalLine()
+                         ? Math.max(maxLogicalColumn, fragment.getMaxLogicalColumn())
+                         : fragment.getMaxLogicalColumn();
       maxVisualColumn = maxColumn;
       logicalLine = fragment.getEndLogicalLine();
       maxOffset = Math.max(maxOffset, fragment.getMaxOffset());
     }
-    if (myView.getEditor().getSoftWrapModel().getSoftWrap(maxOffset) == null) {
-      int resultColumn = column - maxVisualColumn + maxLogicalColumn;
-      if (resultColumn < 0 && maxLogicalColumn > maxVisualColumn) {
+    if (delayedResult != null && !delayedInlay) {
+      return delayedResult;
+    }
+    if (mySoftWrapModel.getSoftWrap(maxOffset) == null) {
+      boolean[] leansForward = new boolean[] { pos.leansRight };
+      int resultColumn = maxLogicalColumn + visToLogWithInlays(logicalLine, column - maxVisualColumn, leansForward);
+      if (resultColumn < 0) {
         resultColumn = Integer.MAX_VALUE; // guarding against overflow
       }
-      return new LogicalPosition(logicalLine, resultColumn, true);
-    }
-    else {
+      return new LogicalPosition(logicalLine, resultColumn, leansForward[0]);
+    } else {
       return offsetToLogicalPosition(maxOffset).leanForward(true);
     }
   }
 
-  @NotNull
-  VisualPosition offsetToVisualPosition(int offset, boolean leanTowardsLargerOffsets, boolean beforeSoftWrap) {
-    return logicalToVisualPosition(offsetToLogicalPosition(offset).leanForward(leanTowardsLargerOffsets), beforeSoftWrap);
+  @NotNull VisualPosition offsetToVisualPosition(int offset, boolean leanTowardsLargerOffsets, boolean beforeSoftWrap) {
+    LogicalPosition pos = offsetToLogicalPosition(offset).leanForward(leanTowardsLargerOffsets);
+    return logicalToVisualPosition(pos, beforeSoftWrap);
   }
 
   int visualPositionToOffset(VisualPosition visualPosition) {
-    return logicalPositionToOffset(visualToLogicalPosition(visualPosition));
+    LogicalPosition pos = visualToLogicalPosition(visualPosition);
+    return logicalPositionToOffset(pos);
   }
 
   int offsetToVisualLine(int offset, boolean beforeSoftWrap) {
@@ -185,151 +289,179 @@ class EditorCoordinateMapper {
     }
     offset = Math.min(offset, textLength);
     offset = DocumentUtil.alignToCodePointBoundary(myDocument, offset);
-
     FoldRegion outermostCollapsed = myFoldingModel.getCollapsedRegionAtOffset(offset);
     if (outermostCollapsed != null && offset > outermostCollapsed.getStartOffset()) {
       assert outermostCollapsed.isValid();
       offset = outermostCollapsed.getStartOffset();
       beforeSoftWrap = false;
     }
-
-    int wrapIndex = myView.getEditor().getSoftWrapModel().getSoftWrapIndex(offset);
-    int softWrapsBeforeOrAtOffset = wrapIndex < 0 ? (- wrapIndex - 1) : wrapIndex + (beforeSoftWrap ? 0 : 1);
-
-    return myDocument.getLineNumber(offset) - myFoldingModel.getFoldedLinesCountBefore(offset) + softWrapsBeforeOrAtOffset;
+    int wrapIndex = mySoftWrapModel.getSoftWrapIndex(offset);
+    int softWrapsBeforeOrAtOffset = wrapIndex < 0
+                                    ? (-wrapIndex - 1)
+                                    : wrapIndex + (beforeSoftWrap ? 0 : 1);
+    return myDocument.getLineNumber(offset)
+           - myFoldingModel.getFoldedLinesCountBefore(offset)
+           + softWrapsBeforeOrAtOffset;
   }
 
   int visualLineToOffset(int visualLine) {
     int start = 0;
     int end = myDocument.getTextLength();
-    if (visualLine <= 0) return start;
-    if (visualLine >= myView.getEditor().getVisibleLineCount()) return end;
-    int current = 0;
-    while (start <= end) {
-      current = (start + end) / 2;
-      int line = offsetToVisualLine(current, false);
-      if (line < visualLine) {
-        start = current + 1;
-      }
-      else if (line > visualLine) {
-        end = current - 1;
-      }
-      else {
-        break;
-      }
+    if (visualLine <= 0) {
+      return start;
+    }
+    if (visualLine >= getVisibleLineCount()) {
+      return end;
+    }
+    if (mySoftWrapModel.getSoftWrapsIntroducedLinesNumber() == 0) {
+      int line = myFoldingModel.getLogicalLineForVisualLineWithoutSoftWraps(visualLine);
+      return myDocument.getLineStartOffset(line);
+    }
+    int current = ObjectUtils.binarySearch(
+      0,
+      myDocument.getTextLength(),
+      mid -> Integer.compare(offsetToVisualLine(mid, false), visualLine)
+    );
+    if (current < 0) {
+      current = -current - 1;
     }
     return visualLineStartOffset(current, true);
   }
 
-  private int visualLineStartOffset(int offset, boolean leanForward) {
-    EditorImpl editor = myView.getEditor();
-    offset = DocumentUtil.alignToCodePointBoundary(myDocument, offset);
-    int result = EditorUtil.getNotFoldedLineStartOffset(editor, offset);
-
-    SoftWrapModelImpl softWrapModel = editor.getSoftWrapModel();
-    List<? extends SoftWrap> softWraps = softWrapModel.getRegisteredSoftWraps();
-    int currentOrPrevWrapIndex = softWrapModel.getSoftWrapIndex(offset);
-    SoftWrap currentOrPrevWrap;
-    if (currentOrPrevWrapIndex < 0) {
-      currentOrPrevWrapIndex = - currentOrPrevWrapIndex - 2;
-      currentOrPrevWrap = currentOrPrevWrapIndex < 0 || currentOrPrevWrapIndex >= softWraps.size() ? null :
-                          softWraps.get(currentOrPrevWrapIndex);
-    }
-    else {
-      currentOrPrevWrap = leanForward ? softWraps.get(currentOrPrevWrapIndex) : null;
-    }
-    if (currentOrPrevWrap != null && currentOrPrevWrap.getStart() > result) {
-      result = currentOrPrevWrap.getStart();
-    }
-    return result;
-  }
-
-  private float getStartX(int line) {
-    return myView.getEditor().isRightAligned() ?
-           getRightAlignmentLineStartX(line) :
-           myView.getInsets().left + (line == 0 ? myView.getPrefixTextWidthInPixels() : 0);
-  }
-
   float getRightAlignmentLineStartX(int visualLine) {
     checkRightAlignment();
-    EditorImpl editor = myView.getEditor();
     int max = getRightAlignmentMarginX();
-    float shift = visualLine == 0 ? myView.getPrefixTextWidthInPixels() : 0;
-    if (visualLine >= editor.getVisibleLineCount()) return max - shift;
-    int lineWidth = myView.getSizeManager().getVisualLineWidth(new VisualLinesIterator(editor, visualLine), false);
+    float shift = visualLine == 0 ? getPrefixTextWidthInPixels() : 0;
+    if (visualLine >= getVisibleLineCount()) {
+      return max - shift;
+    }
+    VisualLinesIterator iterator = createVisualLinesIterator(visualLine);
+    int lineWidth = getSizeManager().getVisualLineWidth(iterator, false);
     return Math.max(max - lineWidth, 0);
   }
 
   int getRightAlignmentMarginX() {
     checkRightAlignment();
-    EditorImpl editor = myView.getEditor();
+    EditorEx editor = myView.getEditor();
     JScrollBar vsb = editor.getScrollPane().getVerticalScrollBar();
-    int vsbWidth = vsb != null && editor.getVerticalScrollbarOrientation() == EditorEx.VERTICAL_SCROLLBAR_RIGHT ? vsb.getWidth() : 0;
-    return editor.getContentComponent().getWidth() - myView.getInsets().right - editor.getSettings().getLineCursorWidth() - vsbWidth;
+    int vsbWidth = vsb != null && editor.getVerticalScrollbarOrientation() == EditorEx.VERTICAL_SCROLLBAR_RIGHT
+                   ? vsb.getWidth()
+                   : 0;
+    return editor.getContentComponent().getWidth()
+           - getInsets().right
+           - editor.getSettings().getLineCursorWidth()
+           - vsbWidth;
   }
 
-  private void checkRightAlignment() {
-    if (!myView.getEditor().isRightAligned()) throw new IllegalStateException("Editor is not right-aligned");
-  }
-
-  @NotNull
-  VisualPosition xyToVisualPosition(@NotNull Point2D p) {
-    int visualLine = yToVisualLine((int)p.getY());
+  /// @noinspection IntegerDivisionInFloatingPointContext
+  @NotNull VisualPosition xyToVisualPosition(@NotNull Point2D p) {
+    int visualLine = yToVisualLine((int) p.getY());
     int lastColumn = 0;
     float x = getStartX(visualLine);
-    float px = (float)p.getX();
-    if (visualLine < myView.getEditor().getVisibleLineCount()) {
-      int visualLineStartOffset = visualLineToOffset(visualLine);
+    float px = (float) p.getX();
+    int logicalLine = -1;
+    if (visualLine < getVisibleLineCount()) {
       int maxOffset = 0;
-      for (VisualLineFragmentsIterator.Fragment fragment : VisualLineFragmentsIterator.create(myView, visualLineStartOffset, false, true)) {
+      int visualLineStartOffset = visualLineToOffset(visualLine);
+      for (var fragment : createVisualLineFragmentsIterator(visualLineStartOffset, false, true)) {
+        if (fragment.getCurrentFoldRegion() instanceof CustomFoldRegion) {
+          return new VisualPosition(visualLine, 0);
+        }
         if (px <= fragment.getStartX()) {
           if (fragment.getStartVisualColumn() == 0) {
             return new VisualPosition(visualLine, 0);
           }
-          int markerWidth = myView.getEditor().getSoftWrapModel().getMinDrawingWidthInPixels(SoftWrapDrawingType.AFTER_SOFT_WRAP);
+          SoftWrapEx lineStartSoftWrap = mySoftWrapModel.getSoftWrapEx(visualLineStartOffset);
+          int markerWidth = lineStartSoftWrap != null && lineStartSoftWrap.isPaintable()
+                            ? mySoftWrapModel.getMinDrawingWidthInPixels(SoftWrapDrawingType.AFTER_SOFT_WRAP)
+                            : 0;
           float indent = fragment.getStartX() - markerWidth;
           if (px <= indent) {
             break;
           }
           boolean after = px >= indent + markerWidth / 2;
-          return new VisualPosition(visualLine, fragment.getStartVisualColumn() - (after ? 0 : 1), !after);
+          return new VisualPosition(
+            visualLine,
+            fragment.getStartVisualColumn() - (after ? 0 : 1),
+            !after
+          );
         }
         float nextX = fragment.getEndX();
         if (px <= nextX) {
-          int[] column = fragment.xToVisualColumn(px);
-          return new VisualPosition(visualLine, column[0], column[1] > 0);
+          VisualColumn column = fragment.xToVisualColumn(px);
+          return new VisualPosition(visualLine, column.column, column.leansRight);
         }
         x = nextX;
         lastColumn = fragment.getEndVisualColumn();
         maxOffset = Math.max(maxOffset, fragment.getMaxOffset());
+        logicalLine = fragment.getEndLogicalLine();
       }
-      if (myView.getEditor().getSoftWrapModel().getSoftWrap(maxOffset) != null) {
-        int markerWidth = myView.getEditor().getSoftWrapModel().getMinDrawingWidthInPixels(SoftWrapDrawingType.BEFORE_SOFT_WRAP_LINE_FEED);
-        if (px <= x + markerWidth) {
-          boolean after = px >= x + markerWidth / 2;
-          return new VisualPosition(visualLine, lastColumn + (after ? 1 : 0), !after);
+      SoftWrapEx lineEndSoftWrap = mySoftWrapModel.getSoftWrapEx(maxOffset);
+      if (lineEndSoftWrap != null) {
+        if (lineEndSoftWrap.isPaintable()) {
+          int markerWidth = mySoftWrapModel.getMinDrawingWidthInPixels(SoftWrapDrawingType.BEFORE_SOFT_WRAP_LINE_FEED);
+          if (px <= x + markerWidth) {
+            boolean after = px >= x + markerWidth / 2;
+            return new VisualPosition(
+              visualLine,
+              lastColumn + (after ? 1 : 0),
+              !after
+            );
+          }
+          px -= markerWidth;
+          lastColumn++;
         }
-        px -= markerWidth;
-        lastColumn++;
+        logicalLine = -1;
+      } else if (logicalLine == -1) {
+        logicalLine = myDocument.getLineNumber(visualLineStartOffset);
       }
     }
-    float plainSpaceWidth = myView.getPlainSpaceWidth();
+    float plainSpaceWidth = getPlainSpaceWidth();
     float remainingShift = px - x;
-    int additionalColumns = remainingShift <= 0 ? 0 : Math.round(remainingShift / plainSpaceWidth);
-    return new VisualPosition(visualLine, lastColumn + additionalColumns, remainingShift > additionalColumns * plainSpaceWidth);
+    if (remainingShift > plainSpaceWidth && logicalLine >= 0) {
+      int inlaysWidth = 0;
+      int inlayCount = 0;
+      for (Inlay<?> inlay : myInlayModel.getAfterLineEndElementsForLogicalLine(logicalLine)) {
+        int width = inlay.getWidthInPixels();
+        int newWidth = inlaysWidth + width;
+        if (remainingShift <= plainSpaceWidth + newWidth) {
+          boolean leftPart = remainingShift <= plainSpaceWidth + (inlaysWidth + newWidth) / 2;
+          return new VisualPosition(
+            visualLine,
+            lastColumn + 1 + inlayCount + (leftPart ? 0 : 1),
+            leftPart
+          );
+        }
+        inlaysWidth = newWidth;
+        inlayCount++;
+      }
+      remainingShift -= inlaysWidth;
+      lastColumn += inlayCount;
+    }
+    int additionalColumns = remainingShift <= 0
+                            ? 0
+                            : Math.round(remainingShift / plainSpaceWidth);
+    return new VisualPosition(
+      visualLine,
+      lastColumn + additionalColumns,
+      remainingShift > additionalColumns * plainSpaceWidth
+    );
   }
 
-  @NotNull
-  Point2D visualPositionToXY(@NotNull VisualPosition pos) {
+  @NotNull Point2D visualPositionToXY(@NotNull VisualPosition pos) {
     int visualLine = pos.line;
     int column = pos.column;
     int y = visualLineToY(visualLine);
     float x = getStartX(visualLine);
     int lastColumn = 0;
-    if (visualLine < myView.getEditor().getVisibleLineCount()) {
-      int visualLineStartOffset = visualLineToOffset(visualLine);
+    int logicalLine = -1;
+    if (visualLine < getVisibleLineCount()) {
       int maxOffset = 0;
-      for (VisualLineFragmentsIterator.Fragment fragment : VisualLineFragmentsIterator.create(myView, visualLineStartOffset, false, true)) {
+      int visualLineStartOffset = visualLineToOffset(visualLine);
+      for (var fragment : createVisualLineFragmentsIterator(visualLineStartOffset, false, true)) {
+        if (fragment.getCurrentFoldRegion() instanceof CustomFoldRegion) {
+          return new Point2D.Double(fragment.getStartX(), y);
+        }
         int startVisualColumn = fragment.getStartVisualColumn();
         if (column < startVisualColumn || column == startVisualColumn && !pos.leansRight) {
           break;
@@ -341,47 +473,168 @@ class EditorCoordinateMapper {
         x = fragment.getEndX();
         lastColumn = endColumn;
         maxOffset = Math.max(maxOffset, fragment.getMaxOffset());
+        logicalLine = fragment.getEndLogicalLine();
       }
-      if (column > lastColumn && myView.getEditor().getSoftWrapModel().getSoftWrap(maxOffset) != null) {
+      SoftWrapEx lineEndSoftWrap = mySoftWrapModel.getSoftWrapEx(maxOffset);
+      if (column > lastColumn && lineEndSoftWrap != null && lineEndSoftWrap.isPaintable()) {
         column--;
-        x += myView.getEditor().getSoftWrapModel().getMinDrawingWidthInPixels(SoftWrapDrawingType.BEFORE_SOFT_WRAP_LINE_FEED);
+        x += mySoftWrapModel.getMinDrawingWidthInPixels(SoftWrapDrawingType.BEFORE_SOFT_WRAP_LINE_FEED);
+      } else if (logicalLine == -1) {
+        logicalLine = myDocument.getLineNumber(visualLineStartOffset);
       }
     }
-    float additionalShift = column <= lastColumn ? 0 : (column - lastColumn) * myView.getPlainSpaceWidth();
+    if (column > lastColumn + 1 && logicalLine >= 0) {
+      int inlaysWidth = 0;
+      int inlayCount = 0;
+      for (Inlay<?> inlay : myInlayModel.getAfterLineEndElementsForLogicalLine(logicalLine)) {
+        inlayCount++;
+        inlaysWidth += inlay.getWidthInPixels();
+        if (column == lastColumn + 1 + inlayCount) {
+          break;
+        }
+      }
+      x += inlaysWidth;
+      column -= inlayCount;
+    }
+    float additionalShift = column <= lastColumn
+                            ? 0
+                            : (column - lastColumn) * getPlainSpaceWidth();
     return new Point2D.Double(x + additionalShift, y);
   }
 
-  @NotNull
-  Point2D offsetToXY(int offset, boolean leanTowardsLargerOffsets, boolean beforeSoftWrap) {
-    offset = Math.max(0, Math.min(myDocument.getTextLength(), offset));
+  @NotNull Point2D offsetToXY(int offset, boolean leanTowardsLargerOffsets, boolean beforeSoftWrap) {
+    offset = Math.clamp(offset, 0, myDocument.getTextLength());
     offset = DocumentUtil.alignToCodePointBoundary(myDocument, offset);
     int logicalLine = myDocument.getLineNumber(offset);
     int visualLine = offsetToVisualLine(offset, beforeSoftWrap);
     int visualLineStartOffset = visualLineToOffset(visualLine);
     int y = visualLineToY(visualLine);
     float x = getStartX(logicalLine);
-    if (myDocument.getTextLength() > 0) {
-      boolean firstFragment = true;
-      for (VisualLineFragmentsIterator.Fragment fragment : VisualLineFragmentsIterator.create(myView, offset, beforeSoftWrap, true)) {
-        if (firstFragment && offset == visualLineStartOffset && !leanTowardsLargerOffsets) {
-          x = fragment.getStartX();
-          break;
-        }
-        firstFragment = false;
-        int minOffset = fragment.getMinOffset();
-        int maxOffset = fragment.getMaxOffset();
-        if (fragment.getCurrentInlay() == null &&
-            (offset > minOffset && offset < maxOffset ||
-            offset == minOffset && leanTowardsLargerOffsets ||
-            offset == maxOffset && !leanTowardsLargerOffsets)) {
-          x = fragment.offsetToX(offset);
-          break;
-        }
-        else {
-          x = fragment.getEndX();
-        }
+    boolean firstFragment = true;
+    for (var fragment : createVisualLineFragmentsIterator(offset, beforeSoftWrap, true)) {
+      if (firstFragment && offset == visualLineStartOffset && !leanTowardsLargerOffsets ||
+          fragment.getCurrentFoldRegion() instanceof CustomFoldRegion) {
+        x = fragment.getStartX();
+        break;
+      }
+      firstFragment = false;
+      int minOffset = fragment.getMinOffset();
+      int maxOffset = fragment.getMaxOffset();
+      if (fragment.getCurrentInlay() == null &&
+          (offset > minOffset && offset < maxOffset ||
+          offset == minOffset && leanTowardsLargerOffsets ||
+          offset == maxOffset && !leanTowardsLargerOffsets)) {
+        x = fragment.offsetToX(offset);
+        break;
+      } else {
+        x = fragment.getEndX();
       }
     }
     return new Point2D.Double(x, y);
+  }
+
+  int getVisibleLineCount() {
+    return Math.max(1, getVisibleLogicalLinesCount() + mySoftWrapModel.getSoftWrapsIntroducedLinesNumber());
+  }
+
+  /**
+   * @return the number of visible logical lines, which is the number of total logical lines minus the number of folded lines
+   */
+  private int getVisibleLogicalLinesCount() {
+    return myDocument.getLineCount() - myFoldingModel.getTotalNumberOfFoldedLines();
+  }
+
+  /// @noinspection SameParameterValue
+  private int visualLineStartOffset(int offset, boolean leanForward) {
+    offset = DocumentUtil.alignToCodePointBoundary(myDocument, offset);
+    int result = EditorUtil.getNotFoldedLineStartOffset(myDocument, myFoldingModel, offset, false);
+    List<? extends SoftWrap> softWraps = mySoftWrapModel.getRegisteredSoftWraps();
+    int currentOrPrevWrapIndex = mySoftWrapModel.getSoftWrapIndex(offset);
+    SoftWrap currentOrPrevWrap;
+    if (currentOrPrevWrapIndex < 0) {
+      currentOrPrevWrapIndex = -currentOrPrevWrapIndex - 2;
+      currentOrPrevWrap = currentOrPrevWrapIndex < 0 || currentOrPrevWrapIndex >= softWraps.size()
+                          ? null
+                          : softWraps.get(currentOrPrevWrapIndex);
+    } else {
+      currentOrPrevWrap = leanForward ? softWraps.get(currentOrPrevWrapIndex) : null;
+    }
+    if (currentOrPrevWrap != null && currentOrPrevWrap.getStart() > result) {
+      result = currentOrPrevWrap.getStart();
+    }
+    return result;
+  }
+
+  private int logToVisWithInlays(int logLine, int remainingLogColumn, boolean leansForward) {
+    if (remainingLogColumn <= 1 && (remainingLogColumn != 1 || !leansForward)) {
+      return remainingLogColumn;
+    }
+    return remainingLogColumn + myInlayModel.getAfterLineEndElementsForLogicalLine(logLine).size();
+  }
+
+  private int visToLogWithInlays(int logLine, int remainingVisColumns, boolean[] leansForward) {
+    if (remainingVisColumns == 0) {
+      return 0;
+    }
+    int inlayCount = myInlayModel.getAfterLineEndElementsForLogicalLine(logLine).size();
+    if (inlayCount == 0) {
+      return remainingVisColumns;
+    }
+    if (remainingVisColumns < inlayCount + 1) {
+      leansForward[0] = false;
+      return 1;
+    }
+    if (remainingVisColumns == inlayCount + 1) {
+      leansForward[0] = true;
+    }
+    return remainingVisColumns - inlayCount;
+  }
+
+  private float getStartX(int line) {
+    return isRightAligned()
+           ? getRightAlignmentLineStartX(line)
+           : getInsets().left + (line == 0 ? getPrefixTextWidthInPixels() : 0);
+  }
+
+  private @NotNull Iterable<VisualLineFragmentsIterator.Fragment> createVisualLineFragmentsIterator(int offset, boolean beforeSoftWrap, boolean align) {
+    return VisualLineFragmentsIterator.create(myView, offset, beforeSoftWrap, align);
+  }
+
+  private @NotNull VisualLinesIterator createVisualLinesIterator(int visualLine) {
+    return new VisualLinesIterator(myView, visualLine);
+  }
+
+  private float getPlainSpaceWidth() {
+    return myView.getPlainSpaceWidth();
+  }
+
+  private float getPrefixTextWidthInPixels() {
+    return myView.getPrefixTextWidthInPixels();
+  }
+
+  private Insets getInsets() {
+    return myView.getInsets();
+  }
+
+  private int getLineHeight() {
+    return myView.getLineHeight();
+  }
+
+  private boolean isRightAligned() {
+    return myView.getEditor().isRightAligned();
+  }
+
+  private EditorSizeManager getSizeManager() {
+    return myView.getSizeManager();
+  }
+
+  private void checkRightAlignment() {
+    if (!isRightAligned()) {
+      throw new IllegalStateException("Editor is not right-aligned");
+    }
+  }
+
+  private int getInlaysHeight(int visualLine, boolean above) {
+    return EditorUtil.getInlaysHeight(myInlayModel, visualLine, above);
   }
 }
