@@ -1,83 +1,78 @@
-/*
- * Copyright 2000-2009 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ui.wizard;
 
-import javax.swing.*;
+import com.intellij.ide.IdeBundle;
+import com.intellij.openapi.util.NlsActions;
+
+import javax.swing.AbstractAction;
+import javax.swing.Action;
 import java.awt.event.ActionEvent;
+import org.jetbrains.annotations.ApiStatus;
 
 public abstract class WizardAction extends AbstractAction {
 
   protected WizardModel myModel;
 
-  public WizardAction(String name, WizardModel model) {
+  public WizardAction(@NlsActions.ActionText String name, WizardModel model) {
     super(name);
     myModel = model;
   }
 
   protected void setMnemonic(char value) {
-    putValue(Action.MNEMONIC_KEY, new Integer(value));
+    putValue(Action.MNEMONIC_KEY, Integer.valueOf(value));
   }
 
-  public final void setName(String name) {
+  public final void setName(@NlsActions.ActionText String name) {
     putValue(Action.NAME, name);
   }
 
-  public static class Next extends WizardAction {
+  @ApiStatus.Internal
+  public static final class Next extends WizardAction {
 
     public Next(WizardModel model) {
-      super("Next >", model);
-      setMnemonic('N');
+      super(IdeBundle.message("button.wizard.next"), model);
     }
 
+    @Override
     public void actionPerformed(ActionEvent e) {
       myModel.next();
     }
   }
 
-  public static class Previous extends WizardAction {
+  @ApiStatus.Internal
+  public static final class Previous extends WizardAction {
 
     public Previous(WizardModel model) {
-      super("< Previous", model);
-      setMnemonic('P');
+      super(IdeBundle.message("button.wizard.previous"), model);
     }
 
+    @Override
     public void actionPerformed(ActionEvent e) {
       myModel.previous();
     }
   }
 
-  public static class Finish extends WizardAction {
+  @ApiStatus.Internal
+  public static final class Finish extends WizardAction {
 
     public Finish(WizardModel model) {
-      super("Finish", model);
-      setMnemonic('F');
+      super(IdeBundle.message("button.create"), model);
     }
 
+    @Override
     public void actionPerformed(ActionEvent e) {
       myModel.finish();
     }
   }
 
-  public static class Cancel extends WizardAction {
+  @ApiStatus.Internal
+  public static final class Cancel extends WizardAction {
 
     public Cancel(WizardModel model) {
-      super("Cancel", model);
-      setMnemonic('C');
+      super(IdeBundle.message("button.cancel"), model);
     }
 
+    @Override
     public void actionPerformed(ActionEvent e) {
       myModel.cancel();
     }
