@@ -1,65 +1,64 @@
-/*
- * Copyright 2000-2011 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.diff.impl.patch.apply;
 
-import com.intellij.diff.util.IntPair;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.diff.impl.patch.ApplyPatchStatus;
 import com.intellij.openapi.diff.impl.patch.PatchHunk;
 import com.intellij.openapi.diff.impl.patch.PatchLine;
+import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.UnfairTextRange;
 import com.intellij.openapi.util.text.LineTokenizer;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.text.Strings;
+import com.intellij.openapi.vcs.VcsBundle;
 import com.intellij.openapi.vcs.changes.patch.AppliedTextPatch;
 import com.intellij.util.BeforeAfter;
 import com.intellij.util.Consumer;
+import com.intellij.util.IntPair;
 import com.intellij.util.containers.ContainerUtil;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.TreeMap;
 
 import static com.intellij.openapi.diff.impl.patch.ApplyPatchStatus.ALREADY_APPLIED;
+import static com.intellij.openapi.diff.impl.patch.ApplyPatchStatus.FAILURE;
+import static com.intellij.openapi.diff.impl.patch.ApplyPatchStatus.PARTIAL;
 import static com.intellij.openapi.diff.impl.patch.ApplyPatchStatus.SUCCESS;
 
-public class GenericPatchApplier {
-  private static final Logger LOG = Logger.getInstance("#com.intellij.openapi.diff.impl.patch.apply.GenericPatchApplier");
-  private final static int ourMaxWalk = 1000;
-  
+public final class GenericPatchApplier {
+  private static final Logger LOG = Logger.getInstance(GenericPatchApplier.class);
+  private static final int ourMaxWalk = 1000;
+
   private final TreeMap<TextRange, MyAppliedData> myTransformations;
   private final List<String> myLines;
-  private final List<PatchHunk> myHunks;
+  private final List<? extends PatchHunk> myHunks;
   private final boolean myBaseFileEndsWithNewLine;
   private boolean myHadAlreadyAppliedMet;
 
   private final ArrayList<SplitHunk> myNotBound;
   private final ArrayList<SplitHunk> myNotExact;
   private boolean mySuppressNewLineInEnd;
-  @NotNull private final List<AppliedTextPatch.AppliedSplitPatchHunk> myAppliedInfo;
+  private final @NotNull List<AppliedTextPatch.AppliedSplitPatchHunk> myAppliedInfo;
   private static final IntPair EMPTY_OFFSET = new IntPair(0, 0);
 
-  private static void debug(final String s) {
+  private static void debug(final @NonNls String s) {
     if (LOG.isDebugEnabled()) {
       LOG.debug(s);
     }
   }
 
-  public GenericPatchApplier(final CharSequence text, List<PatchHunk> hunks) {
+  public GenericPatchApplier(final CharSequence text, List<? extends PatchHunk> hunks) {
     debug("GenericPatchApplier created, hunks: " + hunks.size());
     myLines = new ArrayList<>();
     Collections.addAll(myLines, LineTokenizer.tokenize(text, false));
@@ -72,8 +71,7 @@ public class GenericPatchApplier {
     myAppliedInfo = new ArrayList<>();
   }
 
-  @Nullable
-  public static AppliedPatch apply(CharSequence text, List<PatchHunk> hunks) {
+  public static @Nullable AppliedPatch apply(@NotNull CharSequence text, @NotNull List<? extends PatchHunk> hunks) {
     String patchedText = PlainSimplePatchApplier.apply(text, hunks);
     if (patchedText != null) {
       return new AppliedPatch(patchedText, SUCCESS);
@@ -87,8 +85,7 @@ public class GenericPatchApplier {
     return new AppliedPatch(applier.getAfter(), applier.getStatus());
   }
 
-  @NotNull
-  public static AppliedSomehowPatch applySomehow(CharSequence text, List<PatchHunk> hunks) {
+  public static @NotNull AppliedSomehowPatch applySomehow(CharSequence text, List<? extends PatchHunk> hunks) {
     String patchedText = PlainSimplePatchApplier.apply(text, hunks);
     if (patchedText != null) {
       return new AppliedSomehowPatch(patchedText, SUCCESS, false);
@@ -103,8 +100,8 @@ public class GenericPatchApplier {
   }
 
   public static class AppliedPatch {
-    @NotNull public final String patchedText;
-    @NotNull public final ApplyPatchStatus status;
+    public final @NotNull String patchedText;
+    public final @NotNull ApplyPatchStatus status;
 
     public AppliedPatch(@NotNull String patchedText, @NotNull ApplyPatchStatus status) {
       this.patchedText = patchedText;
@@ -123,38 +120,38 @@ public class GenericPatchApplier {
 
   public ApplyPatchStatus getStatus() {
     if (! myNotExact.isEmpty()) {
-      return ApplyPatchStatus.FAILURE;
+      return FAILURE;
     } else {
       if (myTransformations.isEmpty() && myHadAlreadyAppliedMet) return ALREADY_APPLIED;
       boolean haveAlreadyApplied = myHadAlreadyAppliedMet;
       boolean haveTrue = false;
       for (MyAppliedData data : myTransformations.values()) {
         if (data.isHaveAlreadyApplied()) {
-          haveAlreadyApplied |= true;
+          haveAlreadyApplied = true;
         } else {
           haveTrue = true;
         }
       }
-      if (haveAlreadyApplied && ! haveTrue) return ALREADY_APPLIED;
-      if (haveAlreadyApplied) return ApplyPatchStatus.PARTIAL;
-      return ApplyPatchStatus.SUCCESS;
+      if (haveAlreadyApplied && !haveTrue) return ALREADY_APPLIED;
+      if (haveAlreadyApplied) return PARTIAL;
+      return SUCCESS;
     }
   }
 
-  private void printTransformations(final String comment) {
+  private void printTransformations(final @NonNls String comment) {
     if (LOG.isDebugEnabled()) {
       LOG.debug(comment + " GenericPatchApplier.printTransformations ---->");
       int cnt = 0;
       for (Map.Entry<TextRange, MyAppliedData> entry : myTransformations.entrySet()) {
         final TextRange key = entry.getKey();
         final MyAppliedData value = entry.getValue();
-        LOG.info(String.valueOf(cnt) +
+        LOG.info(cnt +
                  " lines " +
                  key.getStartOffset() +
                  ":" +
                  key.getEndOffset() +
                  " will replace into: " +
-                 StringUtil.join(value.getList(), "\n"));
+                 Strings.join(value.getList(), "\n"));
       }
       LOG.debug("<------ GenericPatchApplier.printTransformations");
     }
@@ -180,55 +177,87 @@ public class GenericPatchApplier {
   }
 
   public boolean execute() {
-    debug("GenericPatchApplier execute started");
-    if (! myHunks.isEmpty()) {
-      mySuppressNewLineInEnd = myHunks.get(myHunks.size() - 1).isNoNewLineAtEnd();
-    }
-    for (final PatchHunk hunk : myHunks) {
-      myNotExact.addAll(SplitHunk.read(hunk));
-    }
-    for (Iterator<SplitHunk> iterator = myNotExact.iterator(); iterator.hasNext(); ) {
-      SplitHunk splitHunk = iterator.next();
-      final SplitHunk copy = createWithAllContextCopy(splitHunk);
-      if (testForExactMatch(copy, splitHunk)) {
-        iterator.remove();
+    try {
+      debug("GenericPatchApplier execute started");
+      if (!myHunks.isEmpty()) {
+        mySuppressNewLineInEnd = myHunks.getLast().isNoNewLineAtEnd();
       }
-    }
-    printTransformations("after exact match");
-    /*for (SplitHunk hunk : myNotExact) {
-      complementInsertAndDelete(hunk);
-    }*/
+      for (final PatchHunk hunk : myHunks) {
+        myNotExact.addAll(SplitHunk.read(hunk));
+      }
+      for (Iterator<SplitHunk> iterator = myNotExact.iterator(); iterator.hasNext(); ) {
+        SplitHunk splitHunk = iterator.next();
+        final SplitHunk copy = createWithAllContextCopy(splitHunk);
+        if (testForExactMatch(copy, splitHunk)) {
+          iterator.remove();
+        }
+      }
+      printTransformations("after exact match");
+      /*for (SplitHunk hunk : myNotExact) {
+        complementInsertAndDelete(hunk);
+      }*/
 
-    for (Iterator<SplitHunk> iterator = myNotExact.iterator(); iterator.hasNext(); ) {
-      SplitHunk hunk = iterator.next();
-      final SplitHunk copy = createWithAllContextCopy(hunk);
-      if (copy.isInsertion()) continue;
-      if (testForPartialContextMatch(copy, new ExactMatchSolver(copy), ourMaxWalk, hunk)) {
-        iterator.remove();
+      for (Iterator<SplitHunk> iterator = myNotExact.iterator(); iterator.hasNext(); ) {
+        SplitHunk hunk = iterator.next();
+        final SplitHunk copy = createWithAllContextCopy(hunk);
+        if (copy.isInsertion()) continue;
+        if (testForPartialContextMatch(copy, new ExactMatchSolver(copy), ourMaxWalk, hunk)) {
+          iterator.remove();
+        }
       }
+      printTransformations("after exact but without context");
+      for (Iterator<SplitHunk> iterator = myNotExact.iterator(); iterator.hasNext(); ) {
+        SplitHunk hunk = iterator.next();
+        SplitHunk original = copySplitHunk(hunk, hunk.getContextAfter(), hunk.getContextBefore());
+        complementInsertAndDelete(hunk);
+        if (hunk.isInsertion()) {
+          processAppliedInfoForUnApplied(original);
+          continue;
+        }
+        if (testForPartialContextMatch(hunk, new ExactMatchSolver(hunk), ourMaxWalk, original)) {
+          iterator.remove();
+        }
+        else {
+          processAppliedInfoForUnApplied(original);
+        }
+      }
+      printTransformations("after variable place match");
+      return myNotExact.isEmpty();
     }
-    printTransformations("after exact but without context");
-    for (Iterator<SplitHunk> iterator = myNotExact.iterator(); iterator.hasNext(); ) {
-      SplitHunk hunk = iterator.next();
-      SplitHunk original = copySplitHunk(hunk, hunk.getContextAfter(), hunk.getContextBefore());
-      complementInsertAndDelete(hunk);
-      if (hunk.isInsertion()) {
-        processAppliedInfoForUnApplied(original);
-        continue;
-      }
-      if (testForPartialContextMatch(hunk, new ExactMatchSolver(hunk), ourMaxWalk, original)) {
-        iterator.remove();
-      }
-      else {
-        processAppliedInfoForUnApplied(original);
-      }
+    catch (ProcessCanceledException e) {
+      throw e;
     }
-    printTransformations("after variable place match");
+    catch (Throwable e) {
+      LOG.error(e); // GenericPatchApplier is buggy, limit AIOOB impact on user
+    }
+
+    resetToFallbackStateOnError(false);
     return myNotExact.isEmpty();
   }
 
-  @NotNull
-  private static SplitHunk copySplitHunk(@NotNull SplitHunk hunk, @NotNull List<String> contextAfter, @NotNull List<String> contextBefore) {
+  private void resetToFallbackStateOnError(boolean applySomehow) {
+    myHadAlreadyAppliedMet = false;
+    myTransformations.clear();
+
+    myAppliedInfo.clear();
+    myNotExact.clear();
+    for (PatchHunk hunk : myHunks) {
+      List<SplitHunk> splitHunks = SplitHunk.read(hunk);
+      myNotExact.addAll(splitHunks);
+
+      for (SplitHunk splitHunk : splitHunks) {
+        processAppliedInfoForUnApplied(splitHunk);
+      }
+    }
+
+    if (applySomehow) {
+      myNotBound.addAll(myNotExact);
+      myNotBound.sort(HunksComparator.getInstance());
+      myNotExact.clear();
+    }
+  }
+
+  private static @NotNull SplitHunk copySplitHunk(@NotNull SplitHunk hunk, @NotNull List<String> contextAfter, @NotNull List<String> contextBefore) {
     ArrayList<BeforeAfter<List<String>>> steps = new ArrayList<>();
     for (BeforeAfter<List<String>> step : hunk.getPatchSteps()) {
       steps.add(new BeforeAfter<>(new ArrayList<>(step.getBefore()), new ArrayList<>(step.getAfter())));
@@ -250,7 +279,7 @@ public class GenericPatchApplier {
       LOG.debug(sb.toString());
       return copy;
     }
-    final BeforeAfter<List<String>> first = steps.get(0);
+    final BeforeAfter<List<String>> first = steps.getFirst();
     final int lastStepIndex = steps.size() - 1;
     final BeforeAfter<List<String>> last = steps.get(lastStepIndex);
 
@@ -271,9 +300,8 @@ public class GenericPatchApplier {
     return copy;
   }
 
-  @NotNull
-  private static String constructHunkWarnMessage(int startLineBefore, int startLineAfter, int sizeBefore, int sizeAfter) {
-    return String.format("Can't detect hunk modification lines for: -%d,%d +%d,%d", startLineBefore, sizeBefore,
+  private static @NotNull String constructHunkWarnMessage(int startLineBefore, int startLineAfter, int sizeBefore, int sizeAfter) {
+    return VcsBundle.message("patch.apply.hunk.warning", startLineBefore, sizeBefore,
                          startLineAfter, sizeAfter);
   }
 
@@ -283,49 +311,49 @@ public class GenericPatchApplier {
 
   private static void complementInsertAndDelete(final SplitHunk hunk) {
     final List<BeforeAfter<List<String>>> steps = hunk.getPatchSteps();
-    final BeforeAfter<List<String>> first = steps.get(0);
-    final BeforeAfter<List<String>> last = steps.get(steps.size() - 1);
+    final BeforeAfter<List<String>> first = steps.getFirst();
+    final BeforeAfter<List<String>> last = steps.getLast();
     final boolean complementFirst = first.getBefore().isEmpty() || first.getAfter().isEmpty();
     final boolean complementLast = last.getBefore().isEmpty() || last.getAfter().isEmpty();
 
     final List<String> contextBefore = hunk.getContextBefore();
     if (complementFirst && ! contextBefore.isEmpty()) {
-      final String firstContext = contextBefore.get(contextBefore.size() - 1);
-      first.getBefore().add(0, firstContext);
-      first.getAfter().add(0, firstContext);
-      contextBefore.remove(contextBefore.size() - 1);
+      final String firstContext = contextBefore.getLast();
+      first.getBefore().addFirst(firstContext);
+      first.getAfter().addFirst(firstContext);
+      contextBefore.removeLast();
     }
     final List<String> contextAfter = hunk.getContextAfter();
     if (complementLast && ! contextAfter.isEmpty()) {
-      final String firstContext = contextAfter.get(0);
+      final String firstContext = contextAfter.getFirst();
       last.getBefore().add(firstContext);
       last.getAfter().add(firstContext);
-      contextAfter.remove(0);
+      contextAfter.removeFirst();
     }
   }
 
   private static boolean complementIfShort(final SplitHunk hunk) {
     final List<BeforeAfter<List<String>>> steps = hunk.getPatchSteps();
     if (steps.size() > 1) return false;
-    final BeforeAfter<List<String>> first = steps.get(0);
+    final BeforeAfter<List<String>> first = steps.getFirst();
     final boolean complementFirst = first.getBefore().isEmpty() || first.getAfter().isEmpty() ||
       first.getBefore().size() == 1 || first.getAfter().size() == 1;
     if (! complementFirst) return false;
 
     final List<String> contextBefore = hunk.getContextBefore();
     if (! contextBefore.isEmpty()) {
-      final String firstContext = contextBefore.get(contextBefore.size() - 1);
-      first.getBefore().add(0, firstContext);
-      first.getAfter().add(0, firstContext);
-      contextBefore.remove(contextBefore.size() - 1);
+      final String firstContext = contextBefore.getLast();
+      first.getBefore().addFirst(firstContext);
+      first.getAfter().addFirst(firstContext);
+      contextBefore.removeLast();
       return true;
     }
     final List<String> contextAfter = hunk.getContextAfter();
     if (! contextAfter.isEmpty()) {
-      final String firstContext = contextAfter.get(0);
+      final String firstContext = contextAfter.getFirst();
       first.getBefore().add(firstContext);
       first.getAfter().add(firstContext);
-      contextAfter.remove(0);
+      contextAfter.removeFirst();
       return true;
     }
     return false;
@@ -333,28 +361,40 @@ public class GenericPatchApplier {
 
   // applies in a way that patch _can_ be solved manually even in the case of total mismatch
   public void trySolveSomehow() {
-    assert !myNotExact.isEmpty();
-    for (Iterator<SplitHunk> iterator = myNotExact.iterator(); iterator.hasNext(); ) {
-      final SplitHunk hunk = iterator.next();
-      hunk.cutSameTail();
-      if (!testForPartialContextMatch(hunk, new LongTryMismatchSolver(hunk), ourMaxWalk, null)) {
-        if (complementIfShort(hunk)) {
-          if (!testForPartialContextMatch(hunk, new LongTryMismatchSolver(hunk), ourMaxWalk, null)) {
+    try {
+      assert !myNotExact.isEmpty();
+      for (final SplitHunk hunk : myNotExact) {
+        hunk.cutSameTail();
+        if (!testForPartialContextMatch(hunk, new LongTryMismatchSolver(hunk), ourMaxWalk, null)) {
+          if (complementIfShort(hunk)) {
+            if (!testForPartialContextMatch(hunk, new LongTryMismatchSolver(hunk), ourMaxWalk, null)) {
+              myNotBound.add(hunk);
+            }
+          }
+          else {
             myNotBound.add(hunk);
           }
         }
-        else {
-          myNotBound.add(hunk);
-        }
       }
+
+      myNotBound.sort(HunksComparator.getInstance());
+      myNotExact.clear();
+      return;
     }
-    Collections.sort(myNotBound, HunksComparator.getInstance());
-    myNotExact.clear();
+    catch (ProcessCanceledException e) {
+      throw e;
+    }
+    catch (Throwable e) {
+      LOG.error(e); // GenericPatchApplier is buggy, limit AIOOB impact on user
+    }
+
+    // fallback root on internal error
+    resetToFallbackStateOnError(true);
   }
 
   private boolean testForPartialContextMatch(final SplitHunk splitHunkWithExtendedContext,
                                              final MismatchSolver mismatchSolver,
-                                             final int maxWalkFromBinding, @Nullable final SplitHunk originalSplitHunk) {
+                                             final int maxWalkFromBinding, final @Nullable SplitHunk originalSplitHunk) {
     final List<BeforeAfter<List<String>>> steps = splitHunkWithExtendedContext.getPatchSteps();
     final BetterPoint betterPoint = new BetterPoint();
 
@@ -466,12 +506,11 @@ public class GenericPatchApplier {
     return fragmentResult;
   }
 
-  @NotNull
-  public List<AppliedTextPatch.AppliedSplitPatchHunk> getAppliedInfo() {
+  public @NotNull List<AppliedTextPatch.AppliedSplitPatchHunk> getAppliedInfo() {
     return myAppliedInfo;
   }
 
-  private static class FragmentResult {
+  private static final class FragmentResult {
     private int myStart;
     private int myEnd;
     private boolean myContainAlreadyApplied;
@@ -601,7 +640,7 @@ public class GenericPatchApplier {
           // deletion
           final UnfairTextRange textRange = new UnfairTextRange(j, i + (cntStart - endSize));
           myTransformations.put(textRange, new MyAppliedData(Collections.emptyList(), value.isHaveAlreadyApplied(),
-                                                             value.isPlaceCoinside(), value.isChangedCoinside(), value.myChangeType));
+                                                             value.isPlaceCoincide(), value.isChangedCoincide(), value.myChangeType));
           processAppliedInfo(splitHunk, range, contextOffsetInPatchSteps, AppliedTextPatch.HunkStatus.EXACTLY_APPLIED);
         }
       }
@@ -612,16 +651,16 @@ public class GenericPatchApplier {
           assert cntStart > 0;
           final MyAppliedData newData =
             new MyAppliedData(new ArrayList<>(list.subList(cntStart - (j - i), endSize)), value.isHaveAlreadyApplied(),
-                              value.isPlaceCoinside(),
-                              value.isChangedCoinside(), value.myChangeType);
+                              value.isPlaceCoincide(),
+                              value.isChangedCoincide(), value.myChangeType);
           final TextRange newRange = new TextRange(i, i);
           myTransformations.put(newRange, newData);
           processAppliedInfo(splitHunk, range, contextOffsetInPatchSteps, AppliedTextPatch.HunkStatus.EXACTLY_APPLIED);
           return;
         }
         final MyAppliedData newData =
-          new MyAppliedData(new ArrayList<>(list.subList(cntStart, endSize)), value.isHaveAlreadyApplied(), value.isPlaceCoinside(),
-                            value.isChangedCoinside(), value.myChangeType);
+          new MyAppliedData(new ArrayList<>(list.subList(cntStart, endSize)), value.isHaveAlreadyApplied(), value.isPlaceCoincide(),
+                            value.isChangedCoincide(), value.myChangeType);
         final TextRange newRange = new TextRange(j, i);
         myTransformations.put(newRange, newData);
         processAppliedInfo(splitHunk, range, contextOffsetInPatchSteps, AppliedTextPatch.HunkStatus.EXACTLY_APPLIED);
@@ -643,9 +682,9 @@ public class GenericPatchApplier {
                                   AppliedTextPatch.HunkStatus hunkStatus) {
     if (hunk != null) {
       // +1 to the end  because end range is always not included -> [i;j); except add modification;
-      int newStart = lineWithPartContextApplied.getStartOffset() + contextRangeShift.val1;
+      int newStart = lineWithPartContextApplied.getStartOffset() + contextRangeShift.first;
       int newEnd = hunk.isInsertion() && hunkStatus != AppliedTextPatch.HunkStatus.ALREADY_APPLIED
-                   ? newStart : lineWithPartContextApplied.getEndOffset() + 1 - contextRangeShift.val2;
+                   ? newStart : lineWithPartContextApplied.getEndOffset() + 1 - contextRangeShift.second;
       myAppliedInfo.add(new AppliedTextPatch.AppliedSplitPatchHunk(hunk, newStart, newEnd, hunkStatus));
     }
   }
@@ -662,7 +701,7 @@ public class GenericPatchApplier {
   private static class BetterPoint {
     private Point myPoint;
 
-    public void feed(@NotNull final Point point) {
+    public void feed(final @NotNull Point point) {
       if (myPoint == null || point.meBetter(myPoint)) {
         myPoint = point;
       }
@@ -673,7 +712,7 @@ public class GenericPatchApplier {
     }
   }
 
-  private static class Point {
+  private static final class Point {
     private final int myDistance;
     private final int myContextDistance;
     private final int myCommon;
@@ -687,7 +726,7 @@ public class GenericPatchApplier {
       myContextDistance = contextDistance;
       myCommon = common;
     }
-    
+
     public boolean meBetter(final Point maxPoint) {
       if (myCommon <= 1 && maxPoint.myCommon > 1) return false;
       if (maxPoint.myCommon <= 1 && myCommon > 1) return true;
@@ -708,7 +747,7 @@ public class GenericPatchApplier {
     }
   }
 
-  private class SequentialStepsChecker {
+  private final class SequentialStepsChecker {
     private int myDistance;
     // in the end, will be [excluding] end of changing interval
     private int myIdx;
@@ -731,7 +770,7 @@ public class GenericPatchApplier {
     }
 
     public void go(final List<BeforeAfter<List<String>>> steps) {
-      final Consumer<BeforeAfter<List<String>>> stepConsumer = listBeforeAfter -> {
+      final java.util.function.Consumer<BeforeAfter<List<String>>> stepConsumer = listBeforeAfter -> {
         if (myDistance == 0) {
           // until this point, it all had being doing well
           if (listBeforeAfter.getBefore().isEmpty()) {
@@ -757,22 +796,22 @@ public class GenericPatchApplier {
 
       if (myForward) {
         for (BeforeAfter<List<String>> step : steps) {
-          stepConsumer.consume(step);
+          stepConsumer.accept(step);
         }
       } else {
         for (int i = steps.size() - 1; i >= 0; i--) {
           BeforeAfter<List<String>> step = steps.get(i);
-          stepConsumer.consume(step);
+          stepConsumer.accept(step);
         }
       }
     }
-    
+
     public int getSizeOfFragmentToBeReplaced() {
       return myForward ? (myIdx - myStartIdx) : (myStartIdx - myIdx);
     }
   }
 
-  private static class FirstLineDescriptor {
+  private static final class FirstLineDescriptor {
     private final String myLine;
     private final int myOffset;
     private final int myStepNumber;
@@ -807,25 +846,25 @@ public class GenericPatchApplier {
       return myIsInBefore;
     }
   }
-  
-  private static class ExactMatchSolver extends MismatchSolver {
+
+  private static final class ExactMatchSolver extends MismatchSolver {
     private ExactMatchSolver(final SplitHunk hunk) {
       super(false);
       final List<BeforeAfter<List<String>>> steps = hunk.getPatchSteps();
-      final BeforeAfter<List<String>> first = steps.get(0);
+      final BeforeAfter<List<String>> first = steps.getFirst();
       if (steps.size() == 1 && first.getBefore().isEmpty()) {
-        myResult.add(new FirstLineDescriptor(first.getBefore().get(0), 0, 0,0,true));
+        myResult.add(new FirstLineDescriptor(first.getBefore().getFirst(), 0, 0, 0, true));
       }
       if (! first.getBefore().isEmpty()) {
-        myResult.add(new FirstLineDescriptor(first.getBefore().get(0), 0, 0,0,true));
+        myResult.add(new FirstLineDescriptor(first.getBefore().getFirst(), 0, 0, 0, true));
       }
       if (! first.getAfter().isEmpty()) {
-        myResult.add(new FirstLineDescriptor(first.getAfter().get(0), 0, 0,0,false));
+        myResult.add(new FirstLineDescriptor(first.getAfter().getFirst(), 0, 0, 0, false));
       }
       assert ! myResult.isEmpty();
     }
   }
-  
+
   public static class LongTryMismatchSolver extends MismatchSolver {
     // let it be 3 first steps plus 2 lines as an attempt
     public LongTryMismatchSolver(final SplitHunk hunk) {
@@ -850,7 +889,7 @@ public class GenericPatchApplier {
       }
     }
   }
-  
+
   private abstract static class MismatchSolver {
     protected final ArrayList<FirstLineDescriptor> myResult;
     private final boolean myAllowMismatch;
@@ -868,13 +907,13 @@ public class GenericPatchApplier {
       return myAllowMismatch;
     }
   }
-  
+
   private Iterator<Integer> getMatchingIterator(final String line, final int originalStart, final int maxWalkFromBinding) {
     return ContainerUtil.concatIterators(new WalkingIterator(line, originalStart, maxWalkFromBinding, true),
                                           new WalkingIterator(line, originalStart, maxWalkFromBinding, false));
   }
-  
-  private class WalkingIterator implements Iterator<Integer> {
+
+  private final class WalkingIterator implements Iterator<Integer> {
     private final String myLine;
     // true = down
     private final boolean myDirection;
@@ -888,7 +927,7 @@ public class GenericPatchApplier {
       myLeftWalk = leftWalk;
 
       myDirection = direction;
-      myCurrentIdx = direction ? start - 1 : start; 
+      myCurrentIdx = direction ? start - 1 : start;
       step();
     }
 
@@ -936,7 +975,7 @@ public class GenericPatchApplier {
         }
       }
     }
-    
+
     private boolean isSeized(final int lineNumber) {
       final TextRange art = new TextRange(lineNumber, lineNumber);
       final TextRange floor = myTransformations.floorKey(art);
@@ -948,7 +987,7 @@ public class GenericPatchApplier {
     final int offset = splitHunk.getContextBefore().size();
     final List<BeforeAfter<List<String>>> steps = splitHunk.getPatchSteps();
     if (splitHunk.isInsertion()) {
-      final boolean emptyFile = myLines.isEmpty() || myLines.size() == 1 && myLines.get(0).trim().length() == 0;
+      final boolean emptyFile = myLines.isEmpty() || myLines.size() == 1 && myLines.getFirst().trim().isEmpty();
       if (emptyFile) {
         myNotBound.add(splitHunk);
         processAppliedInfoForUnApplied(splitHunk);
@@ -987,30 +1026,28 @@ public class GenericPatchApplier {
   }
 
   // will not find consider fragments that intersect
-  private class FragmentMatcher {
+  private final class FragmentMatcher {
     private final int myIdx;
     private int myOffsetIdxInHunk;
     // if we set index in hunk != 0, then we will check only one side
     private Boolean myBeforeSide;
-    private boolean myIsInBefore;
-    private final int myIdxInHunk;
     private final BeforeAfter<List<String>> myBeforeAfter;
 
     private FragmentMatcher(int idx, BeforeAfter<List<String>> beforeAfter) {
       myOffsetIdxInHunk = 0;
       myIdx = idx;
       myBeforeAfter = beforeAfter;
-      myIdxInHunk = 0;
       //myBeforeSide = true;
     }
-    
+
     public void setSideAndIdx(final int startInHunk, final boolean beforeSide) {
       myOffsetIdxInHunk = startInHunk;
       myBeforeSide = beforeSide;
       if (myBeforeSide) {
-        assert myBeforeAfter.getBefore().size() > myOffsetIdxInHunk || (myOffsetIdxInHunk == 0 && myBeforeAfter.getBefore().size() == 0);
-      } else {
-        assert myBeforeAfter.getAfter().size() > myOffsetIdxInHunk || (myOffsetIdxInHunk == 0 && myBeforeAfter.getAfter().size() == 0);
+        assert myBeforeAfter.getBefore().size() > myOffsetIdxInHunk || myOffsetIdxInHunk == 0;
+      }
+      else {
+        assert myBeforeAfter.getAfter().size() > myOffsetIdxInHunk || myOffsetIdxInHunk == 0;
       }
     }
 
@@ -1040,7 +1077,7 @@ public class GenericPatchApplier {
           return beforePair;
         }
 
-        // take longer coinsiding
+        // take longer coinciding
         final int beforeCommon = myBeforeAfter.getBefore().size() - beforeCheckResult;
         final int afterCommon = myBeforeAfter.getAfter().size() - afterCheckResult;
         if (beforeCommon > 0 && afterCommon > 0) {
@@ -1063,7 +1100,7 @@ public class GenericPatchApplier {
         return beforePair;
       }
     }
-    
+
     private int checkSide(final List<String> side, final boolean canMismatch) {
       int distance = 0;
       if (myOffsetIdxInHunk > 0) {
@@ -1098,9 +1135,9 @@ public class GenericPatchApplier {
       linesToSb(sb, hunk.getAfterAll(), true);
     }
     iterateTransformations(range -> {
-      List<String> baseLineslist = myLines.subList(range.getStartOffset(), range.getEndOffset() + 1);
+      List<String> baseLinesList = myLines.subList(range.getStartOffset(), range.getEndOffset() + 1);
       boolean withLineBreak = !containsLastLine(range) || myBaseFileEndsWithNewLine;
-      linesToSb(sb, baseLineslist, withLineBreak);
+      linesToSb(sb, baseLinesList, withLineBreak);
     }, range -> {
       final MyAppliedData appliedData = myTransformations.get(range);
       List<String> list = appliedData.getList();
@@ -1122,7 +1159,7 @@ public class GenericPatchApplier {
   }
 
   // indexes are passed inclusive
-  private void iterateTransformations(final Consumer<TextRange> consumerExcluded, final Consumer<TextRange> consumerIncluded) {
+  private void iterateTransformations(final Consumer<? super TextRange> consumerExcluded, final Consumer<? super TextRange> consumerIncluded) {
     if (myTransformations.isEmpty()) {
       consumerExcluded.consume(new UnfairTextRange(0, myLines.size() - 1));
     } else {
@@ -1151,10 +1188,10 @@ public class GenericPatchApplier {
     }
   }
 
-  public static class SplitHunk {
+  public static final class SplitHunk {
     private final List<String> myContextBefore;
     private final List<String> myContextAfter;
-    @NotNull private final List<BeforeAfter<List<String>>> myPatchSteps;
+    private final @NotNull List<BeforeAfter<List<String>>> myPatchSteps;
     private final int myStartLineBefore;
     private final int myStartLineAfter;
 
@@ -1171,7 +1208,7 @@ public class GenericPatchApplier {
 
     // todo
     public void cutSameTail() {
-      final BeforeAfter<List<String>> lastStep = myPatchSteps.get(myPatchSteps.size() - 1);
+      final BeforeAfter<List<String>> lastStep = myPatchSteps.getLast();
       final List<String> before = lastStep.getBefore();
       final List<String> after = lastStep.getAfter();
       int cntBefore = before.size() - 1;
@@ -1184,8 +1221,8 @@ public class GenericPatchApplier {
       // typically only 1 line
       int cutSame = before.size() - 1 - cntBefore;
       for (int i = 0; i < cutSame; i++) {
-        before.remove(before.size() - 1);
-        after.remove(after.size() - 1);
+        before.removeLast();
+        after.removeLast();
       }
     }
 
@@ -1225,26 +1262,26 @@ public class GenericPatchApplier {
       }
       return result;
     }
-    
-    private static int readOne(final List<PatchLine> lines, final List<String> contextBefore, final List<String> contextAfter, 
-                               final List<BeforeAfter<List<String>>> steps, final int startI) {
+
+    private static int readOne(final List<? extends PatchLine> lines, final List<? super String> contextBefore, final List<? super String> contextAfter,
+                               final List<? super BeforeAfter<List<String>>> steps, final int startI) {
       int i = startI;
       for (; i < lines.size(); i++) {
         final PatchLine patchLine = lines.get(i);
-        if (! PatchLine.Type.CONTEXT.equals(patchLine.getType())) break;
+        if (PatchLine.Type.CONTEXT != patchLine.getType()) break;
         contextBefore.add(patchLine.getText());
       }
 
-      final boolean addFirst = i < lines.size() && PatchLine.Type.ADD.equals(lines.get(i).getType());
+      final boolean addFirst = i < lines.size() && PatchLine.Type.ADD == lines.get(i).getType();
       List<String> before = new ArrayList<>();
       List<String> after = new ArrayList<>();
       for (; i < lines.size(); i++) {
         final PatchLine patchLine = lines.get(i);
         final PatchLine.Type type = patchLine.getType();
-        if (PatchLine.Type.CONTEXT.equals(type)) {
+        if (PatchLine.Type.CONTEXT == type) {
           break;
         }
-        if (PatchLine.Type.ADD.equals(type)) {
+        if (PatchLine.Type.ADD == type) {
           if (addFirst && ! before.isEmpty()) {
             // new piece
             steps.add(new BeforeAfter<>(before, after));
@@ -1252,7 +1289,7 @@ public class GenericPatchApplier {
             after = new ArrayList<>();
           }
           after.add(patchLine.getText());
-        } else if (PatchLine.Type.REMOVE.equals(type)) {
+        } else if (PatchLine.Type.REMOVE == type) {
           if (! addFirst && ! after.isEmpty()) {
             // new piece
             steps.add(new BeforeAfter<>(before, after));
@@ -1268,7 +1305,7 @@ public class GenericPatchApplier {
 
       for (; i < lines.size(); i++) {
         final PatchLine patchLine = lines.get(i);
-        if (! PatchLine.Type.CONTEXT.equals(patchLine.getType())) {
+        if (PatchLine.Type.CONTEXT != patchLine.getType()) {
           return i;
         }
         contextAfter.add(patchLine.getText());
@@ -1277,7 +1314,7 @@ public class GenericPatchApplier {
     }
 
     public boolean isInsertion() {
-      return myPatchSteps.size() == 1 && myPatchSteps.get(0).getBefore().isEmpty();
+      return myPatchSteps.size() == 1 && myPatchSteps.getFirst().getBefore().isEmpty();
     }
 
     public int getStartLineBefore() {
@@ -1296,11 +1333,10 @@ public class GenericPatchApplier {
       return myContextAfter;
     }
 
-    @NotNull
-    public List<BeforeAfter<List<String>>> getPatchSteps() {
+    public @NotNull List<BeforeAfter<List<String>>> getPatchSteps() {
       return myPatchSteps;
     }
-    
+
     public List<String> getAfterAll() {
       final ArrayList<String> after = new ArrayList<>();
       for (BeforeAfter<List<String>> step : myPatchSteps) {
@@ -1310,29 +1346,29 @@ public class GenericPatchApplier {
     }
   }
 
-  public static class MyAppliedData {
+  public static final class MyAppliedData {
     private List<String> myList;
     private final boolean myHaveAlreadyApplied;
-    private final boolean myPlaceCoinside;
-    private final boolean myChangedCoinside;
+    private final boolean myPlaceCoincide;
+    private final boolean myChangedCoincide;
     private final ChangeType myChangeType;
 
     public MyAppliedData(List<String> list,
                          boolean alreadyApplied,
-                         boolean placeCoinside,
-                         boolean changedCoinside,
+                         boolean placeCoincide,
+                         boolean changedCoincide,
                          ChangeType changeType) {
       myList = list;
       myHaveAlreadyApplied = alreadyApplied;
-      myPlaceCoinside = placeCoinside;
-      myChangedCoinside = changedCoinside;
+      myPlaceCoincide = placeCoincide;
+      myChangedCoincide = changedCoincide;
       myChangeType = changeType;
     }
 
     public List<String> getList() {
       return myList;
     }
-    
+
     public void cutToSize(final int size) {
       assert size > 0 && size < myList.size();
       myList = new ArrayList<>(myList.subList(0, size));
@@ -1342,12 +1378,12 @@ public class GenericPatchApplier {
       return myHaveAlreadyApplied;
     }
 
-    public boolean isPlaceCoinside() {
-      return myPlaceCoinside;
+    public boolean isPlaceCoincide() {
+      return myPlaceCoincide;
     }
 
-    public boolean isChangedCoinside() {
-      return myChangedCoinside;
+    public boolean isChangedCoincide() {
+      return myChangedCoincide;
     }
   }
 
@@ -1358,9 +1394,9 @@ public class GenericPatchApplier {
   public TreeMap<TextRange, MyAppliedData> getTransformations() {
     return myTransformations;
   }
-  
-  private static class HunksComparator implements Comparator<SplitHunk> {
-    private final static HunksComparator ourInstance = new HunksComparator();
+
+  private static final class HunksComparator implements Comparator<SplitHunk> {
+    private static final HunksComparator ourInstance = new HunksComparator();
 
     public static HunksComparator getInstance() {
       return ourInstance;
