@@ -1,50 +1,58 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.vcs.log.ui.render;
 
 import com.intellij.openapi.ui.VerticalFlowLayout;
+import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.ui.ColorUtil;
 import com.intellij.ui.components.JBLabel;
-import com.intellij.util.ObjectUtils;
+import com.intellij.ui.scale.JBUIScale;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.EmptyIcon;
-import com.intellij.util.ui.JBUI;
+import com.intellij.util.ui.UIUtil;
+import com.intellij.vcs.log.VcsLogBundle;
+import com.intellij.vcs.log.VcsLogProvider;
 import com.intellij.vcs.log.VcsRef;
 import com.intellij.vcs.log.VcsRefType;
 import com.intellij.vcs.log.data.VcsLogData;
-import com.intellij.vcs.log.ui.frame.ReferencesPanel;
+import com.intellij.vcs.log.ui.VcsBookmarkRef;
+import com.intellij.vcs.log.ui.details.commit.ReferencesPanel;
+import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
-import java.awt.*;
+import javax.swing.Icon;
+import javax.swing.UIManager;
+import java.awt.Color;
+import java.awt.Font;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
 class TooltipReferencesPanel extends ReferencesPanel {
   private static final int REFS_LIMIT = 10;
   private boolean myHasGroupWithMultipleRefs;
 
-  public TooltipReferencesPanel(@NotNull VcsLogData logData,
-                                @NotNull Collection<VcsRef> refs) {
-    super(new VerticalFlowLayout(JBUI.scale(H_GAP), JBUI.scale(V_GAP)), REFS_LIMIT);
-    VirtualFile root = ObjectUtils.assertNotNull(ContainerUtil.getFirstItem(refs)).getRoot();
-    setReferences(ContainerUtil.sorted(refs, logData.getLogProvider(root).getReferenceManager().getLabelsOrderComparator()));
+  TooltipReferencesPanel(@NotNull VcsLogData logData,
+                         @NotNull Collection<? extends VcsRef> refs,
+                         @NotNull Collection<VcsBookmarkRef> bookmarks) {
+    super(new VerticalFlowLayout(JBUIScale.scale(H_GAP), JBUIScale.scale(V_GAP)), REFS_LIMIT);
+
+    List<VcsRef> sortedRefs;
+    if (refs.isEmpty()) {
+      sortedRefs = Collections.emptyList();
+    }
+    else {
+      VirtualFile root = Objects.requireNonNull(ContainerUtil.getFirstItem(refs)).getRoot();
+      VcsLogProvider provider = Objects.requireNonNull(logData.getLogProviders().get(root));
+      sortedRefs = ContainerUtil.sorted(refs, provider.getReferenceManager().getLabelsOrderComparator());
+    }
+    List<VcsBookmarkRef> sortedBookmarks = ContainerUtil.sorted(bookmarks, Comparator.comparing(b -> b.getType()));
+
+    setReferences(sortedRefs, sortedBookmarks);
   }
 
   @Override
@@ -53,24 +61,23 @@ class TooltipReferencesPanel extends ReferencesPanel {
     for (Map.Entry<VcsRefType, Collection<VcsRef>> typeAndRefs : myGroupedVisibleReferences.entrySet()) {
       if (typeAndRefs.getValue().size() > 1) {
         myHasGroupWithMultipleRefs = true;
+        break;
       }
     }
     super.update();
   }
 
-  @NotNull
   @Override
-  protected Font getLabelsFont() {
+  protected @NotNull Font getLabelsFont() {
     return LabelPainter.getReferenceFont();
   }
 
-  @Nullable
   @Override
-  protected Icon createIcon(@NotNull VcsRefType type, @NotNull Collection<VcsRef> refs, int refIndex, int height) {
+  protected @Nullable Icon createIcon(@NotNull VcsRefType type, @NotNull Collection<VcsRef> refs, int refIndex, int height) {
     if (refIndex == 0) {
       Color color = type.getBackgroundColor();
-      return new LabelIcon(this, height, getBackground(),
-                           refs.size() > 1 ? ContainerUtil.newArrayList(color, color) : Collections.singletonList(color)) {
+      return new LabelIcon(this, height, UIUtil.getToolTipBackground(),
+                           refs.size() > 1 ? List.of(color, color) : Collections.singletonList(color)) {
         @Override
         public int getIconWidth() {
           return getWidth(myHasGroupWithMultipleRefs ? 2 : 1);
@@ -80,16 +87,22 @@ class TooltipReferencesPanel extends ReferencesPanel {
     return createEmptyIcon(height);
   }
 
-  @NotNull
-  private static Icon createEmptyIcon(int height) {
+  private static @NotNull Icon createEmptyIcon(int height) {
     return EmptyIcon.create(LabelIcon.getWidth(height, 2), height);
   }
 
-  @NotNull
   @Override
-  protected JBLabel createRestLabel(int restSize) {
+  protected @NotNull JBLabel createLabel(@Nls @NotNull String text, @Nullable Icon icon) {
+    JBLabel label = super.createLabel(text, icon);
+    label.setForeground(UIUtil.getToolTipForeground());
+    return label;
+  }
+
+  @Override
+  protected @NotNull JBLabel createRestLabel(int restSize) {
     String gray = ColorUtil.toHex(UIManager.getColor("Button.disabledText"));
-    return createLabel("<html><font color=\"#" + gray + "\">... " + restSize + " more in details pane</font></html>",
-                       createEmptyIcon(getIconHeight()));
+    String labelText = VcsLogBundle.message("vcs.log.references.more.tooltip", restSize);
+    String html = HtmlChunk.text(labelText).wrapWith("font").attr("color", "#" + gray).wrapWith(HtmlChunk.html()).toString();
+    return createLabel(html, createEmptyIcon(getIconHeight()));
   }
 }
