@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.lang.ant.config.actions;
 
 import com.intellij.lang.ant.AntBundle;
@@ -20,6 +6,7 @@ import com.intellij.lang.ant.config.AntBuildFile;
 import com.intellij.lang.ant.config.AntConfiguration;
 import com.intellij.lang.ant.config.AntConfigurationBase;
 import com.intellij.lang.ant.config.AntNoFileException;
+import com.intellij.openapi.actionSystem.ActionUpdateThread;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.actionSystem.CommonDataKeys;
@@ -27,6 +14,7 @@ import com.intellij.openapi.actionSystem.Presentation;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.openapi.wm.ToolWindow;
 import com.intellij.openapi.wm.ToolWindowId;
 import com.intellij.openapi.wm.ToolWindowManager;
 import com.intellij.psi.PsiFile;
@@ -34,13 +22,17 @@ import com.intellij.psi.PsiManager;
 import com.intellij.psi.xml.XmlDocument;
 import com.intellij.psi.xml.XmlFile;
 import com.intellij.psi.xml.XmlTag;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
-public class AddAntBuildFile extends AnAction {
+@ApiStatus.Internal
+public final class AddAntBuildFile extends AnAction {
+  @Override
   public void actionPerformed(@NotNull AnActionEvent e) {
     final Project project = e.getProject();
     if (project == null) {
@@ -52,51 +44,59 @@ public class AddAntBuildFile extends AnAction {
     }
     final AntConfiguration antConfiguration = AntConfiguration.getInstance(project);
 
-    final Set<VirtualFile> files = new HashSet<>(Arrays.asList(contextFiles));
+    final Set<VirtualFile> files = new HashSet<>(List.of(contextFiles));
     for (AntBuildFile buildFile : antConfiguration.getBuildFileList()) {
-      files.remove(buildFile.getVirtualFile());
+      VirtualFile virtualFile = buildFile.getVirtualFile();
+      if (virtualFile != null) {
+        files.remove(virtualFile);
+      }
     }
-    
+
     int filesAdded = 0;
-    final StringBuilder errors = new StringBuilder();
+    final @Nls StringBuilder errors = new StringBuilder();
 
     for (VirtualFile file : files) {
       try {
-        antConfiguration.addBuildFile(file);
-        filesAdded++;
+        if (antConfiguration.addBuildFile(file) != null) {
+          filesAdded++;
+        }
       }
       catch (AntNoFileException ex) {
         String message = ex.getMessage();
-        if (message == null || message.length() == 0) {
+        if (message == null || message.isEmpty()) {
           message = AntBundle.message("cannot.add.build.files.from.excluded.directories.error.message", ex.getFile().getPresentableUrl());
         }
-        if (errors.length() > 0) {
+        if (!errors.isEmpty()) {
           errors.append("\n");
         }
         errors.append(message);
       }
     }
 
-    if (errors.length() > 0) {
+    if (!errors.isEmpty()) {
       Messages.showWarningDialog(project, errors.toString(), AntBundle.message("cannot.add.build.file.dialog.title"));
     }
     if (filesAdded > 0) {
-      ToolWindowManager.getInstance(project).getToolWindow(ToolWindowId.ANT_BUILD).activate(null);
+      ToolWindow window = ToolWindowManager.getInstance(project).getToolWindow(ToolWindowId.ANT_BUILD);
+      if (window == null) {
+        window = ActivateAntToolWindowAction.Manager.INSTANCE.createToolWindow(project);
+      }
+      window.activate(null);
     }
   }
 
+  @Override
   public void update(@NotNull AnActionEvent e) {
     final Presentation presentation = e.getPresentation();
     final Project project = e.getProject();
     if (project != null) {
       final VirtualFile[] files = e.getData(CommonDataKeys.VIRTUAL_FILE_ARRAY);
-      if (files != null && files.length > 0) {
-        for (VirtualFile file : files) {
+      if (files != null) {
+        files: for (VirtualFile file : files) {
           final PsiFile psiFile = PsiManager.getInstance(project).findFile(file);
-          if (!(psiFile instanceof XmlFile)) {
+          if (!(psiFile instanceof XmlFile xmlFile)) {
             continue;
           }
-          final XmlFile xmlFile = (XmlFile)psiFile;
           final XmlDocument document = xmlFile.getDocument();
           if (document == null) {
             continue;
@@ -111,6 +111,15 @@ public class AddAntBuildFile extends AnAction {
           if (AntConfigurationBase.getInstance(project).getAntBuildFile(psiFile) != null) {
             continue;
           }
+          if ("http://maven.apache.org/POM/4.0.0".equals(rootTag.getNamespace())) {
+            continue;
+          }
+          for (XmlTag tag : rootTag.getSubTags()) {
+            String name = tag.getName();
+            if (name.equals("modelVersion")) continue files;
+            if (name.equals("groupId")) continue files;
+            if (name.equals("artifactId")) continue files;
+          }
           // found at least one candidate file
           enable(presentation);
           return;
@@ -121,14 +130,17 @@ public class AddAntBuildFile extends AnAction {
     disable(presentation);
   }
 
+  @Override
+  public @NotNull ActionUpdateThread getActionUpdateThread() {
+    return ActionUpdateThread.BGT;
+  }
+
   private static void enable(Presentation presentation) {
-    presentation.setEnabled(true);
-    presentation.setVisible(true);
+    presentation.setEnabledAndVisible(true);
   }
 
   private static void disable(Presentation presentation) {
-    presentation.setEnabled(false);
-    presentation.setVisible(false);
+    presentation.setEnabledAndVisible(false);
   }
 }
 
