@@ -1,42 +1,37 @@
-/*
- * Copyright 2000-2014 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.jetbrains.python.codeInsight;
 
+import com.intellij.lang.Language;
 import com.intellij.lang.injection.MultiHostRegistrar;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.psi.PsiComment;
 import com.intellij.psi.PsiElement;
+import com.intellij.util.containers.ContainerUtil;
 import com.jetbrains.python.PyNames;
-import com.jetbrains.python.psi.*;
+import com.jetbrains.python.psi.PyBinaryExpression;
+import com.jetbrains.python.psi.PyCallExpression;
+import com.jetbrains.python.psi.PyExpression;
+import com.jetbrains.python.psi.PyFormattedStringElement;
+import com.jetbrains.python.psi.PyParenthesizedExpression;
+import com.jetbrains.python.psi.PyQualifiedExpression;
+import com.jetbrains.python.psi.PyReferenceExpression;
+import com.jetbrains.python.psi.PyStringElement;
+import com.jetbrains.python.psi.PyStringLiteralExpression;
 import com.jetbrains.python.psi.impl.PyCallExpressionNavigator;
+import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static com.jetbrains.python.inspections.PyStringFormatParser.*;
+import static com.jetbrains.python.PyStringFormatParser.SubstitutionChunk;
+import static com.jetbrains.python.PyStringFormatParser.parseNewStyleFormat;
+import static com.jetbrains.python.PyStringFormatParser.parsePercentFormat;
 
-/**
- * @author vlan
- */
-public class PyInjectionUtil {
+public final class PyInjectionUtil {
 
   public static class InjectionResult {
-    public static InjectionResult EMPTY = new InjectionResult(false, true);
+    public static final InjectionResult EMPTY = new InjectionResult(false, true);
 
     private final boolean myInjected;
     private final boolean myStrict;
@@ -60,8 +55,8 @@ public class PyInjectionUtil {
   }
 
   public static final List<Class<? extends PsiElement>> ELEMENTS_TO_INJECT_IN =
-    Arrays.asList(PyStringLiteralExpression.class, PyParenthesizedExpression.class, PyBinaryExpression.class, PyCallExpression.class,
-                  PsiComment.class);
+    List.of(PyStringLiteralExpression.class, PyParenthesizedExpression.class, PyBinaryExpression.class,
+            PyCallExpression.class, PsiComment.class);
 
   private PyInjectionUtil() {}
 
@@ -69,8 +64,7 @@ public class PyInjectionUtil {
    * Returns the largest expression in the specified context that represents a string literal suitable for language injection, possibly
    * with concatenation, parentheses, or formatting.
    */
-  @Nullable
-  public static PsiElement getLargestStringLiteral(@NotNull PsiElement context) {
+  public static @Nullable PsiElement getLargestStringLiteral(@NotNull PsiElement context) {
     PsiElement element = null;
     for (PsiElement current = context; current != null && isStringLiteralPart(current, element); current = current.getParent()) {
       element = current;
@@ -82,9 +76,34 @@ public class PyInjectionUtil {
    * Registers language injections in the given registrar for the specified string literal element or its ancestor that contains
    * string concatenations or formatting.
    */
-  @NotNull
-  public static InjectionResult registerStringLiteralInjection(@NotNull PsiElement element, @NotNull MultiHostRegistrar registrar) {
-    return processStringLiteral(element, registrar, "", "", Formatting.NONE);
+  public static @NotNull InjectionResult registerStringLiteralInjection(@NotNull PsiElement element,
+                                                                        @NotNull MultiHostRegistrar registrar,
+                                                                        @NotNull Language language) {
+    return registerStringLiteralInjection(element, registrar, language, "", "");
+  }
+
+  /**
+   * Registers language injections like {@link #registerStringLiteralInjection} but wraps the entire injected range with parentheses.
+   * This is useful when the injected fragment must be implicitly parenthesized like a type annotation string injection.
+   */
+  public static @NotNull InjectionResult registerStringLiteralInjectionWithParenthesis(@NotNull PsiElement element,
+                                                                        @NotNull MultiHostRegistrar registrar,
+                                                                        @NotNull Language language) {
+    return registerStringLiteralInjection(element, registrar, language, "(", ")");
+  }
+
+  private static @NotNull InjectionResult registerStringLiteralInjection(@NotNull PsiElement element,
+                                                                        @NotNull MultiHostRegistrar registrar,
+                                                                        @NotNull Language language,
+                                                                        @NotNull String prefix,
+                                                                        @NotNull String suffix) {
+    registrar.startInjecting(language);
+    final InjectionResult result = processStringLiteral(element, registrar, prefix, suffix, Formatting.NONE);
+    if (result.isInjected()) {
+      registrar.frankensteinInjection(!result.isStrict())
+        .doneInjecting();
+    }
+    return result;
   }
 
   private static boolean isStringLiteralPart(@NotNull PsiElement element, @Nullable PsiElement context) {
@@ -95,8 +114,7 @@ public class PyInjectionUtil {
       final PyExpression contained = ((PyParenthesizedExpression)element).getContainedExpression();
       return contained != null && isStringLiteralPart(contained, context);
     }
-    else if (element instanceof PyBinaryExpression) {
-      final PyBinaryExpression expr = (PyBinaryExpression)element;
+    else if (element instanceof PyBinaryExpression expr) {
       final PyExpression left = expr.getLeftExpression();
       final PyExpression right = expr.getRightExpression();
       if (expr.isOperator("+")) {
@@ -118,11 +136,9 @@ public class PyInjectionUtil {
     return false;
   }
 
-  @Nullable
-  private static PyExpression getFormatCallQualifier(@NotNull PyCallExpression element) {
+  private static @Nullable PyExpression getFormatCallQualifier(@NotNull PyCallExpression element) {
     final PyExpression callee = element.getCallee();
-    if (callee instanceof PyQualifiedExpression) {
-      final PyQualifiedExpression qualifiedExpr = (PyQualifiedExpression)callee;
+    if (callee instanceof PyQualifiedExpression qualifiedExpr) {
       final PyExpression qualifier = qualifiedExpr.getQualifier();
       if (qualifier != null && PyNames.FORMAT.equals(qualifiedExpr.getReferencedName())) {
         return qualifier;
@@ -131,54 +147,74 @@ public class PyInjectionUtil {
     return null;
   }
 
-  @NotNull
-  private static InjectionResult processStringLiteral(@NotNull PsiElement element, @NotNull MultiHostRegistrar registrar,
-                                                      @NotNull String prefix, @NotNull String suffix, @NotNull Formatting formatting) {
+  private static @NotNull InjectionResult processStringLiteral(@NotNull PsiElement element, @NotNull MultiHostRegistrar registrar,
+                                                               @NotNull String prefix, @NotNull String suffix, @NotNull Formatting formatting) {
     final String missingValue = "missing_value";
-    if (element instanceof PyStringLiteralExpression) {
+    if (element instanceof PyStringLiteralExpression expr) {
       boolean injected = false;
       boolean strict = true;
-      final PyStringLiteralExpression expr = (PyStringLiteralExpression)element;
-      final List<TextRange> ranges = expr.getStringValueTextRanges();
-      final String text = expr.getText();
-      for (TextRange range : ranges) {
-        if (formatting != Formatting.NONE) {
-          final String part = range.substring(text);
-          final List<FormatStringChunk> chunks = formatting == Formatting.NEW_STYLE ? parseNewStyleFormat(part) : parsePercentFormat(part);
-          if (!filterSubstitutions(chunks).isEmpty()) {
+      for (PyStringElement stringElem : expr.getStringElements()) {
+        final int nodeOffsetInParent = stringElem.getTextOffset() - expr.getTextRange().getStartOffset();
+        final TextRange contentRange = stringElem.getContentRange();
+        final int contentStartOffset = contentRange.getStartOffset();
+        if (formatting != Formatting.NONE || stringElem.isFormatted() || stringElem.isTemplate()) {
+          // Each range is relative to the start of the string element
+          final List<TextRange> subsRanges;
+          if (formatting != Formatting.NONE) {
+            final String content = stringElem.getContent();
+            subsRanges = StreamEx.of(formatting == Formatting.NEW_STYLE ? parseNewStyleFormat(content) : parsePercentFormat(content))
+                                 .select(SubstitutionChunk.class)
+                                 .map(chunk -> chunk.getTextRange().shiftRight(contentStartOffset))
+                                 .toList();
+          }
+          else {
+            subsRanges = ContainerUtil.map(((PyFormattedStringElement)stringElem).getFragments(), PsiElement::getTextRangeInParent);
+          }
+          if (!subsRanges.isEmpty()) {
             strict = false;
           }
-          for (int i = 0; i < chunks.size(); i++) {
-            final FormatStringChunk chunk = chunks.get(i);
-            if (chunk instanceof ConstantChunk) {
-              final int nextIndex = i + 1;
+
+
+          final TextRange sentinel = TextRange.from(contentRange.getEndOffset(), 0);
+          final List<TextRange> withSentinel = ContainerUtil.append(subsRanges, sentinel);
+
+          int literalChunkStart = contentStartOffset;
+          int literalChunkEnd;
+          for (int i = 0; i < withSentinel.size(); i++) {
+            final TextRange subRange = withSentinel.get(i);
+            literalChunkEnd = subRange.getStartOffset();
+            if (literalChunkEnd > literalChunkStart) {
               final String chunkPrefix;
-              if (i == 1 && chunks.get(0) instanceof SubstitutionChunk) {
+              if (i == 0) {
+                chunkPrefix = prefix;
+              }
+              else if (i == 1 && withSentinel.get(0).getStartOffset() == contentStartOffset) {
                 chunkPrefix = missingValue;
               }
-              else if (i == 0) {
-                chunkPrefix = prefix;
-              } else {
+              else {
                 chunkPrefix = "";
               }
+
               final String chunkSuffix;
-              if (nextIndex < chunks.size() && chunks.get(nextIndex) instanceof SubstitutionChunk) {
+              if (i < withSentinel.size() - 1) {
                 chunkSuffix = missingValue;
               }
-              else if (nextIndex == chunks.size()) {
+              else if (i == withSentinel.size() - 1) {
                 chunkSuffix = suffix;
               }
               else {
                 chunkSuffix = "";
               }
-              final TextRange chunkRange = chunk.getTextRange().shiftRight(range.getStartOffset());
-              registrar.addPlace(chunkPrefix, chunkSuffix, expr, chunkRange);
+
+              final TextRange chunkRange = TextRange.create(literalChunkStart, literalChunkEnd);
+              registrar.addPlace(chunkPrefix, chunkSuffix, expr, chunkRange.shiftRight(nodeOffsetInParent));
               injected = true;
             }
+            literalChunkStart = subRange.getEndOffset();
           }
         }
         else {
-          registrar.addPlace(prefix, suffix, expr, range);
+          registrar.addPlace(prefix, suffix, expr, contentRange.shiftRight(nodeOffsetInParent));
           injected = true;
         }
       }
@@ -190,8 +226,7 @@ public class PyInjectionUtil {
         return processStringLiteral(contained, registrar, prefix, suffix, formatting);
       }
     }
-    else if (element instanceof PyBinaryExpression) {
-      final PyBinaryExpression expr = (PyBinaryExpression)element;
+    else if (element instanceof PyBinaryExpression expr) {
       final PyExpression left = expr.getLeftExpression();
       final PyExpression right = expr.getRightExpression();
       final boolean isLeftString = isStringLiteralPart(left, null);
