@@ -1,21 +1,7 @@
-/*
- * Copyright 2000-2014 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.jetbrains.python.debugger;
 
-import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
 import com.intellij.icons.AllIcons;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ReadAction;
@@ -29,43 +15,64 @@ import com.intellij.ui.ColoredTextContainer;
 import com.intellij.ui.SimpleTextAttributes;
 import com.intellij.xdebugger.XSourcePosition;
 import com.intellij.xdebugger.evaluation.XDebuggerEvaluator;
-import com.intellij.xdebugger.frame.*;
+import com.intellij.xdebugger.frame.XCompositeNode;
+import com.intellij.xdebugger.frame.XStackFrame;
+import com.intellij.xdebugger.frame.XValue;
+import com.intellij.xdebugger.frame.XValueChildrenList;
+import com.jetbrains.python.PyBundle;
+import com.jetbrains.python.debugger.pydev.ProcessDebugger;
+import com.jetbrains.python.debugger.pydev.ProtocolParser;
 import com.jetbrains.python.debugger.settings.PyDebuggerSettings;
-import icons.PythonIcons;
+import com.jetbrains.python.psi.PyUtil;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
-import java.util.*;
-import java.util.stream.IntStream;
+import java.util.Map;
+import java.util.Set;
 
+import static com.jetbrains.python.debugger.PyDebugValueGroupsKt.addGroupValues;
 
 public class PyStackFrame extends XStackFrame {
-
-  private static final Logger LOG = Logger.getInstance("#com.jetbrains.python.pydev.PyStackFrame");
+  @ApiStatus.Internal
+  protected static final Logger LOG = Logger.getInstance(PyStackFrame.class);
 
   private static final Object STACK_FRAME_EQUALITY_OBJECT = new Object();
-  public static final String DOUBLE_UNDERSCORE = "__";
-  public static final String RETURN_VALUES_GROUP_NAME = "Return Values";
-  public static final String SPECIAL_VARIABLES_GROUP_NAME = "Special Variables";
-  public static final HashSet<String> HIDE_TYPES = new HashSet<>(Arrays.asList("function", "type", "classobj", "module"));
-  public static final int DUNDER_VALUES_IND = 0;
-  public static final int SPECIAL_TYPES_IND = DUNDER_VALUES_IND + 1;
-  public static final int IPYTHON_VALUES_IND = SPECIAL_TYPES_IND + 1;
-  public static final int NUMBER_OF_GROUPS = IPYTHON_VALUES_IND + 1;
-
+  public static final @NotNull @NonNls Set<String> COMPREHENSION_NAMES = Set.of("<genexpr>", "<listcomp>", "<dictcomp>",
+                                                                                "<setcomp>");
   private final Project myProject;
-  private final PyFrameAccessor myDebugProcess;
+  @ApiStatus.Internal
+  protected final PyFrameAccessor myDebugProcess;
   private final PyStackFrameInfo myFrameInfo;
   private final XSourcePosition myPosition;
+  private volatile boolean isExternal = true;
+
+  private @Nullable Map<String, PyDebugValueDescriptor> myChildrenDescriptors;
 
   public PyStackFrame(@NotNull Project project,
-                      @NotNull final PyFrameAccessor debugProcess,
-                      @NotNull final PyStackFrameInfo frameInfo, XSourcePosition position) {
+                      final @NotNull PyFrameAccessor debugProcess,
+                      final @NotNull PyStackFrameInfo frameInfo, XSourcePosition position) {
     myProject = project;
     myDebugProcess = debugProcess;
     myFrameInfo = frameInfo;
     myPosition = position;
+    computeIsExternal();
+  }
+
+  private void computeIsExternal() {
+    if (myPosition != null) {
+      VirtualFile file = myPosition.getFile();
+      PyUtil.runWithProgress(myProject, PyBundle.message("debugger.progress.title.stackframe.processing"), false, true, indicator -> {
+        isExternal = ReadAction.compute(() -> {
+                                          final Document document = FileDocumentManager.getInstance().getDocument(file);
+                                          if (document != null && myProject != null) {
+                                            return !ProjectRootManager.getInstance(myProject).getFileIndex().isInContent(file);
+                                          }
+                                          return true;
+                                        });
+      });
+    }
   }
 
   @Override
@@ -85,107 +92,74 @@ public class PyStackFrame extends XStackFrame {
 
   @Override
   public void customizePresentation(@NotNull ColoredTextContainer component) {
-    component.setIcon(AllIcons.Debugger.StackFrame);
+    component.setIcon(AllIcons.Debugger.Frame);
 
     if (myPosition == null) {
-      component.append("<frame not available>", SimpleTextAttributes.GRAY_ATTRIBUTES);
+      component.append(PyBundle.message("debugger.stack.frame.frame.not.available"), SimpleTextAttributes.GRAY_ATTRIBUTES);
       return;
     }
 
-    final VirtualFile file = myPosition.getFile();
-    boolean isExternal =
-      ReadAction.compute(() -> {
-
-        final Document document = FileDocumentManager.getInstance().getDocument(file);
-        if (document != null) {
-          return !ProjectRootManager.getInstance(myProject).getFileIndex().isInContent(file);
-        }
-        else {
-          return true;
-        }
-      });
-
-    component.append(myFrameInfo.getName(), gray(SimpleTextAttributes.REGULAR_ATTRIBUTES, isExternal));
-    component.append(", ", gray(SimpleTextAttributes.REGULAR_ATTRIBUTES, isExternal));
-    component.append(myPosition.getFile().getName(), gray(SimpleTextAttributes.REGULAR_ATTRIBUTES, isExternal));
-    component.append(":", gray(SimpleTextAttributes.REGULAR_ATTRIBUTES, isExternal));
-    component.append(Integer.toString(myPosition.getLine() + 1), gray(SimpleTextAttributes.REGULAR_ATTRIBUTES, isExternal));
+    component.append(myFrameInfo.getName(), gray(isExternal));
+    component.append(", ", gray(isExternal));
+    component.append(myPosition.getFile().getName(), gray(isExternal));
+    component.append(":", gray(isExternal));
+    component.append(Integer.toString(myPosition.getLine() + 1), gray(isExternal));
   }
 
-  private static SimpleTextAttributes gray(SimpleTextAttributes attributes, boolean gray) {
-    if (!gray) {
-      return attributes;
-    }
-    else {
-      return getGrayAttributes(attributes);
-    }
-  }
-
-  protected static SimpleTextAttributes getGrayAttributes(SimpleTextAttributes attributes) {
-    return (attributes.getStyle() & SimpleTextAttributes.STYLE_ITALIC) != 0
-           ? SimpleTextAttributes.GRAY_ITALIC_ATTRIBUTES : SimpleTextAttributes.GRAYED_ATTRIBUTES;
+  protected static SimpleTextAttributes gray(boolean gray) {
+    return (gray) ? SimpleTextAttributes.GRAYED_ATTRIBUTES : SimpleTextAttributes.REGULAR_ATTRIBUTES;
   }
 
   @Override
-  public void computeChildren(@NotNull final XCompositeNode node) {
+  public void computeChildren(final @NotNull XCompositeNode node) {
     if (node.isObsolete()) return;
     myDebugProcess.setCurrentRootNode(node);
     ApplicationManager.getApplication().executeOnPooledThread(() -> {
       try {
-        boolean cached = myDebugProcess.isCurrentFrameCached();
-        XValueChildrenList values = myDebugProcess.loadFrame();
+        boolean cached = myDebugProcess.isFrameCached(this);
+        XValueChildrenList values = myDebugProcess.loadFrame(this);
         if (!node.isObsolete()) {
           addChildren(node, values);
         }
         if (values != null && !cached) {
-          PyDebugValue.getAsyncValues(myDebugProcess, values);
+          PyDebugValue.getAsyncValues(this, myDebugProcess, values);
         }
       }
       catch (PyDebuggerException e) {
         if (!node.isObsolete()) {
-          node.setErrorMessage("Unable to display frame variables");
+          node.setErrorMessage(PyBundle.message("debugger.stack.frame.unable.to.display.frame.variables"));
         }
         LOG.warn(e);
       }
     });
   }
 
-  protected void addChildren(@NotNull final XCompositeNode node, @Nullable final XValueChildrenList children) {
+  protected void addChildren(final @NotNull XCompositeNode node, final @Nullable XValueChildrenList children) {
     if (children == null) {
       node.addChildren(XValueChildrenList.EMPTY, true);
       return;
     }
     final PyDebuggerSettings debuggerSettings = PyDebuggerSettings.getInstance();
     final XValueChildrenList filteredChildren = new XValueChildrenList();
-    final HashMap<String, XValue> returnedValues = new HashMap<>();
-    final ArrayList<Map<String, XValue>> specialValuesGroups = new ArrayList<>();
-    IntStream.range(0, NUMBER_OF_GROUPS).mapToObj(i -> new HashMap()).forEach(specialValuesGroups::add);
+    boolean isReturnEmpty = true;
     boolean isSpecialEmpty = true;
 
     for (int i = 0; i < children.size(); i++) {
       XValue value = children.getValue(i);
       String name = children.getName(i);
-      if (value instanceof PyDebugValue) {
-        PyDebugValue pyValue = (PyDebugValue)value;
-        if (pyValue.isReturnedVal() && debuggerSettings.isWatchReturnValues()) {
-          returnedValues.put(name, value);
+      if (value instanceof PyDebugValue pyValue) {
+
+        restoreValueDescriptor(pyValue);
+
+        if (name.equals(ProtocolParser.DUMMY_RET_VAL) && debuggerSettings.isWatchReturnValues()) {
+          isReturnEmpty = false;
         }
         else if (!debuggerSettings.isSimplifiedView()) {
+          if (ProtocolParser.HIDDEN_TYPES.contains(name)) continue;
           filteredChildren.add(name, value);
         }
         else {
-          int groupIndex = -1;
-          if (name.startsWith(DOUBLE_UNDERSCORE) && (name.endsWith(DOUBLE_UNDERSCORE)) && name.length() > 4) {
-            groupIndex = DUNDER_VALUES_IND;
-          }
-          else if (pyValue.isIPythonHidden()) {
-            groupIndex = IPYTHON_VALUES_IND;
-          }
-          else if (HIDE_TYPES.contains(pyValue.getType())) {
-            groupIndex = SPECIAL_TYPES_IND;
-          }
-          if (groupIndex > -1) {
-            specialValuesGroups.get(groupIndex).put(name, value);
+          if (name.equals(ProtocolParser.DUMMY_SPECIAL_VAR) || name.equals(ProtocolParser.DUMMY_IPYTHON_HIDDEN)) {
             isSpecialEmpty = false;
           }
           else {
@@ -194,57 +168,15 @@ public class PyStackFrame extends XStackFrame {
         }
       }
     }
-    node.addChildren(filteredChildren, returnedValues.isEmpty() && isSpecialEmpty);
-    if (!returnedValues.isEmpty()) {
-      addReturnedValuesGroup(node, returnedValues);
+    node.addChildren(filteredChildren, isReturnEmpty && isSpecialEmpty);
+    if (!isReturnEmpty) {
+      addGroupValues(PyBundle.message("debugger.stack.frame.return.values"),
+                     AllIcons.Debugger.WatchLastReturnValue, node, null, myDebugProcess, ProcessDebugger.GROUP_TYPE.RETURN, "()");
     }
     if (!isSpecialEmpty) {
-      addSpecialValuesGroup(node, specialValuesGroups);
+      addGroupValues(PyBundle.message("debugger.stack.frame.special.variables"),
+                     AllIcons.Debugger.SpecialVar, node, null, myDebugProcess, ProcessDebugger.GROUP_TYPE.SPECIAL, null);
     }
-  }
-
-  private static void addReturnedValuesGroup(@NotNull final XCompositeNode node, Map<String, XValue> returnedValues) {
-    final ArrayList<XValueGroup> group = Lists.newArrayList();
-    group.add(new XValueGroup(RETURN_VALUES_GROUP_NAME) {
-      @Override
-      public void computeChildren(@NotNull XCompositeNode node) {
-        XValueChildrenList list = new XValueChildrenList();
-        for (Map.Entry<String, XValue> entry : returnedValues.entrySet()) {
-          list.add(entry.getKey() + "()", entry.getValue());
-        }
-        node.addChildren(list, true);
-      }
-
-      @NotNull
-      @Override
-      public Icon getIcon() {
-        return AllIcons.Debugger.WatchLastReturnValue;
-      }
-    });
-    node.addChildren(XValueChildrenList.topGroups(group), true);
-  }
-
-  private static void addSpecialValuesGroup(@NotNull final XCompositeNode node, List<Map<String, XValue>> specialValuesGroups) {
-    final ArrayList<XValueGroup> group = Lists.newArrayList();
-    group.add(new XValueGroup(SPECIAL_VARIABLES_GROUP_NAME) {
-      @Override
-      public void computeChildren(@NotNull XCompositeNode node) {
-        XValueChildrenList list = new XValueChildrenList();
-        for (Map<String, XValue> group : specialValuesGroups) {
-          for (Map.Entry<String, XValue> entry : group.entrySet()) {
-            list.add(entry.getKey(), entry.getValue());
-          }
-        }
-        node.addChildren(list, true);
-      }
-
-      @NotNull
-      @Override
-      public Icon getIcon() {
-        return PythonIcons.Python.Debug.SpecialVar;
-      }
-    });
-    node.addChildren(XValueChildrenList.topGroups(group), true);
   }
 
   public String getThreadId() {
@@ -261,5 +193,36 @@ public class PyStackFrame extends XStackFrame {
 
   protected XSourcePosition getPosition() {
     return myPosition;
+  }
+
+  public @NotNull String getName() {
+    return myFrameInfo.getName();
+  }
+
+  public boolean isComprehension() {
+    return COMPREHENSION_NAMES.contains(getName());
+  }
+
+  public void setChildrenDescriptors(@Nullable Map<String, PyDebugValueDescriptor> childrenDescriptors) {
+    myChildrenDescriptors = childrenDescriptors;
+  }
+
+  public void restoreChildrenDescriptors(@NotNull Map<String, Map<String, PyDebugValueDescriptor>> descriptorsCache) {
+    final String threadFrameId = getThreadFrameId();
+    final Map<String, PyDebugValueDescriptor> childrenDescriptors = descriptorsCache.getOrDefault(threadFrameId, Maps.newHashMap());
+    setChildrenDescriptors(childrenDescriptors);
+    descriptorsCache.put(threadFrameId, childrenDescriptors);
+  }
+
+  @ApiStatus.Internal
+  protected void restoreValueDescriptor(PyDebugValue value) {
+    if (myChildrenDescriptors != null) {
+      PyDebugValueDescriptor descriptor = myChildrenDescriptors.getOrDefault(value.getName(), null);
+      if (descriptor == null) {
+        descriptor = new PyDebugValueDescriptor();
+        myChildrenDescriptors.put(value.getName(), descriptor);
+      }
+      value.setDescriptor(descriptor);
+    }
   }
 }
